*Empty MediaWiki Message*

--- a/ᏧᏴᏢ_ᎠᎹᏰᏟ.mw
+++ b/ᏧᏴᏢ_ᎠᎹᏰᏟ.mw
@@ -9,112 +9,112 @@
 ! [[Population|ᎾᏂᎥ ᏴᏫ]]<ref>[http://unstats.un.org/unsd/demographic/products/dyb/dyb2008/Table03.pdf "Demographic Yearbook: Table 3: Population by sex, rate of population increase, surface area and density."] United Nations Statistics Division, 2008 (2010-10-14)</ref>
 ! [[Capital|ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ]]
 |-
-| [[Bermuda]] (ᎩᎵᏏᏲ)
+| [[Bermuda|ᏋᎽᏓ]] (ᎩᎵᏏᏲ)
 | align="right" | 54
 | align="right" | 65,000
-| [[Hamilton, Bermuda|Hamilton]]
+| [[Hamilton|ᎭᎻᎵᏔᏂ]]
 |-
 | [[Canada|ᎨᎾᏓ]]
 | align="right" | 9,984,670
 | align="right" | 33,573,000
-| [[Ottawa]]
+| [[Ottawa|ᎠᏔᏩ]]
 |-
-| [[Greenland]]
+| [[Greenland|ᎢᏤᏳᏍᏗ ᎦᏙᎯ]]
 | align="right" | 2,166,086
 | align="right" | 57,000
-| [[Nuuk]]
+| [[Nuuk|ᏄᎧ]]
 |-
-| [[Mexico|ᎠᏂᏍᏆᏂᎢ]]
+| [[Mexico|ᎺᏏᏅᏟ]]
 | align="right" | 1,964,375
 | align="right" | 109,610,000
-| [[Mexico City|ᎠᏂᏍᏆᏂᎢ ᎦᏚᎲᎢ]]
+| [[Mexico City|ᎺᏏᎪ ᎦᏚᎲ]]
 |-
-| Saint Pierre ᎠᎴ Miquelon (ᎦᎸᏥᏱ)
+| [[Saint Pierre & Miquelon|ᎾᏍᎦᏅᎾ ᏈᏓ ᎠᎴ ᎻᎨᎳᏂ]] (ᎦᎸᏥᏱ)
 | align="right" | 242
 | align="right" | 6,000
-| [[Saint-Pierre, Saint Pierre ᎠᎴ Miquelon|Saint-Pierre]]
+| [[Saint-Pierre|ᎾᏍᎦᏅᎾ ᏈᏓ]]
 |-
-| [[United States|ᎠᎹᏰᏟ]] <ref>ᎠᏠᏯᏍᏗᏍᎩ [[Hawaii|ᎭᏩᏱ]]</ref>
+| [[United States of America|ᏩᏥᏂ ᎠᎹᏰᏟ ᎤᏙᏢᏒ]] <ref>ᎠᏠᏯᏍᏗᏍᎩ [[Hawaii|ᎭᏩᏱ]]</ref>
 | align="right" | 9,629,091
 | align="right" | 314,659,000
-| [[Washington, D.C.]]
+| [[Washington, D.C.|ᏩᏒᏓᏃᎢ]]
 |- class="sortbottom"
 | colspan=5 align=center|'''Caribbean'''
 |-
-| Anguilla ([[United Kingdom|ᎩᎵᏏᏲ]])
+| [[Anguilla|ᎠᏂᎩᎳ]] ([[United Kingdom|ᎩᎵᏏᏲ]])
 | align="right" | 91
 | align="right" | 15,000
-| [[The Valley, Anguilla|The Valley]]
+| [[The Valley|ᎤᎨᏓᎵᏲᎢ]]
 |-
-| [[Antigua ᎠᎴ Barbuda]] <!--ᎠᏂᏘᏚᏩ -->
+| [[Antigua & Barbuda|ᎠᏂᏘᏆ ᎠᎴ ᏆᏊᏓ]] <!--ᎠᏂᏘᏚᏩ -->
 | align="right" | 442
 | align="right" | 88,000
-| [[St. John's, Antigua ᎠᎴ Barbuda|St. John's]]
+| [[St. John's|ᎾᏍᎦᏅᎾ ᏣᏂ]]
 |-
-| [[Aruba]] ([[Netherlands|Neth]].)
+| [[Aruba|ᎠᎷᏆ]] ([[Netherlands|ᏛᏥᏱ]].)
 | align="right" | 180
 | align="right" | 107,000
-| [[Oranjestad, Aruba|Oranjestad]]
+| [[Oranjestad|ᎠᏂᏥ ᎦᏚᎲ]]
 |-
-| Ꮎ [[Bahamas]]
+| [[Bahamas|Ꮎ ᏆᎭᎹᏏ]]
 | align="right" | 13,943
 | align="right" | 342,000
-| [[Nassau, Bahamas|Nassau]]
+| [[Nassau|ᎾᏐ]]
 |-
-| [[Barbados]]
+| [[Barbados|ᏆᏇᏙᏏ]]
 | align="right" | 430
 | align="right" | 256,000
-| [[Bridgetown]]
+| [[Bridgetown|ᎠᏒᏢᎢ ᎦᏚᎲ]]
 |-
-| [[Bermuda]] (ᎩᎵᏏᏲ)
+| [[Bermuda|ᏋᎽᏓ]] (ᎩᎵᏏᏲ)
 | align="right" | 54
 | align="right" | 65,000
-| [[Hamilton, Bermuda|Hamilton]]
+| [[Hamilton|ᎭᎻᎵᏔᏂ]]
 |-
-| [[Bonaire]] (Neth.)
+| [[Bonaire|ᏉᏁᎠ]] (ᏛᏥᏱ)
 | align="right" | 294
 | align="right" | 12,093<ref name="nethant">[http://www.cbs.an/population/population_b2.asp "Central Bureau of Statistics Netherlands Antilles."] Statistical information: Population. ''Government of the Netherlands Antilles.'' (2010-10-14)</ref>
-| [[Kralendijk]]
+| [[Kralendijk|ᎧᏩᎴᏂᏓᎢᎩ]]
 |-
 | [[British Virgin Islands]] <!--ᎩᎵᏏ Virgin ᎯᎸᏍᎩ ᎠᎹᏰᎵ --> (ᎩᎵᏏᏲ)
 | align="right" | 151
 | align="right" | 23,000
-| [[Road Town]]
+| [[Road Town|ᏅᏃᎯ ᎦᏚᎲ]]
 |-
 | [[Cayman Islands|Cayman ᎯᎸᏍᎩ ᎠᎹᏰᎵ]] (ᎩᎵᏏᏲ)
 | align="right" | 264
 | align="right" | 56,000
-| [[George Town, Cayman Islands|George Town]]
+| [[George Town|ᏣᏥ ᎦᏚᎲ]]
 |-
-| [[Cuba]]
+| [[Cuba|ᎫᏆ]]
 | align="right" | 109,886
 | align="right" | 11,204,000
-| [[Havana]]
+| [[Havana|ᎭᏩᎾ]]
 |-
-| [[Curaçao]] (Neth.)
+| [[Curaçao|ᎫᎳᏌᎣ]] (ᏛᏥᏱ)
 | align="right" | 444
 | align="right" | 140,794<ref name="nethant"/>
-| [[Willemstad]]
+| [[Willemstad|ᏫᎴᎻᏍᏔᏗ]]
 |-
 | [[Dominica|ᏙᎻᏂᎧ]]
 | align="right" | 751
 | align="right" | 67,000
-| [[Roseau]]
+| [[Roseau|ᎶᏐ]]
 |-
 |[[Dominican Republic]]
 | align="right" | 48,671
 | align="right" | 10,090,000
-| [[Santo Domingo]]
+| [[Santo Domingo|ᎾᏍᎦᏅᎾ ᏙᎻᏂᎪ]]
 |-
-| [[Grenada]]
+| [[Grenada|ᏆᏁᏓ]]
 | align="right" | 344
 | align="right" | 104,000
-| [[St. George's, Grenada|St. George's]]
+| [[St. George's|ᎾᏍᎦᏅᎾ ᏣᏥ]]
 |-
-| [[Guadeloupe]] ([[France|ᎦᎸᏥᏱ]])
+| [[Guadeloupe|ᏆᏓᎷᏈ]] ([[France|ᎦᎸᏥᏱ]])
 | align="right" | 1705
 | align="right" | 465,000
-| [[Basse-Terre]]
+| [[Basse-Terre|ᏆᏍ-ᏖᎠ]]
 |-
 | [[Haiti|ᏎᏘ]] 
 | align="right" | 27,750
@@ -124,9 +124,9 @@
 | [[Jamaica|ᏣᎺᎢᎧ]]
 | align="right" | 10,991
 | align="right" | 2,719,000
-| [[Kingston, Jamaica|Kingston]]
+| [[Kingston, Jamaica|ᎩᏂᎩᏍᏔᏂ]]
 |-
-| [[Martinique]] (ᎦᎸᏥᏱ)
+| [[Martinique|ᎹᏘᏂᎩ]] (ᎦᎸᏥᏱ)
 | align="right" | 1,128
 | align="right" | 405,000
 | [[Fort-de-France]]
@@ -146,20 +146,20 @@
 | align="right" | 3,982,000
 | [[San Juan, Puerto Rico|San Juan]]
 |-
-| [[Saba]] (Neth.)
+| [[Saba|ᏌᏆ]] (ᏛᏥᏱ)
 | align="right" | 13
 | align="right" | 1,537<ref name="nethant"/>
 | [[The Bottom]]
 |-
-| [[Saint Barthélemy|ᎾᏍᎦᏅᎾ Barthélemy]] (ᎦᎸᏥᏱ)
+| [[Saint Barthélemy|ᎾᏍᎦᏅᎾ ᏆᏙᎳᎻ]] (ᎦᎸᏥᏱ)
 | align="right" | 21<ref name="areacia"/>
 | align="right" | 7,448<ref name="popcia"/>
-| [[Gustavia, Saint Barthélemy|Gustavia]]
+| [[Gustavia|ᎫᏍᏔᏫᏯ]]
 |-
-|[[Saint Kitts ᎠᎴ Nevis|ᎾᏍᎦᏅᎾ Kitts ᎠᎴ Nevis]]
+|[[Saint Kitts & Nevis|ᎾᏍᎦᏅᎾ ᎩᏥ ᎠᎴ ᏁᏫᏏ]]
 | align="right" | 2,61
 | align="right" | 52,000
-| [[Basseterre]]
+| [[Basseterre|ᏆᏍᏖᎠ]]
 |-
 | [[Saint Lucia|ᎾᏍᎦᏅᎾ ᎷᏏᎠ]]
 | align="right" | 539
@@ -171,12 +171,12 @@
 | align="right" | 29,820<ref name="popcia"/>
 | [[Marigot, St. Martin|Marigot]]
 |-
-| [[ᎾᏍᎦᏅᎾ Vincent ᎠᎴ Ꮎ Grenadines]]
+| [[Saint Vincent & The Grenadines|ᎾᏍᎦᏅᎾ ᏫᏂᏎᏂᏘ ᎠᎴ Ꮎ ᏇᎾᏗᏂᏏ]]
 | align="right" | 389
 | align="right" | 109,000
 | [[Kingstown]]
 |-
-| [[Sint Eustatius]] (Neth.)
+| [[Sint Eustatius]] (ᏛᏥᏱ)
 | align="right" | 21
 | align="right" | 2,739<ref name="nethant"/>
 | [[Oranjestad, Sint Eustatius|Oranjestad]]
@@ -186,7 +186,7 @@
 | align="right" | 40,009<ref name="nethant"/>
 | [[Philipsburg, Sint Maarten|Philipsburg]]
 |-
-| [[Trinidad ᎠᎴ Tobago]]<ref name="two">Depending on definitions, Aruba, Bonaire, Curaçao, Panama, and Trinidad and Tobago have territory in [[List of countries spanning more than one continent|either or both of]] North and South America.</ref>
+| [[Trinidad & Tobago|ᏟᏂᏓᏗ ᎠᎴ ᏔᏇᎪ]]<ref name="two">Depending on definitions, Aruba, Bonaire, Curaçao, Panama, and Trinidad and Tobago have territory in [[List of countries spanning more than one continent|either or both of]] North and South America.</ref>
 | align="right" | 5,130
 | align="right" | 1,339,000
 | [[Port of Spain]]
@@ -203,40 +203,40 @@
 |-class="sortbottom"
 | colspan=5 align=center |'''Central America'''
 |-
-| [[Belize]]
+| [[Belize|ᏇᎵᏏ]]
 | align="right" | 22,966
 | align="right" | 307,000
-| [[Belmopan]]
+| [[Belmopan|ᏇᎵᎼᏆᏂ]]
 |-
-| [[Costa Rica]]
+| [[Costa Rica|ᎪᏍᏔ ᎵᎧ]]
 | align="right" | 51,100
 | align="right" | 4,579,000
-| [[San José, Costa Rica|San José]]
+| [[San José, Costa Rica|ᎾᏍᎦᏅᎾ ᏦᏩ]]
 |-
-| [[El Salvador]]
+| [[El Salvador|ᎡᎵ-ᏌᎵᏩᏙᎠ]]
 | align="right" | 21,041
 | align="right" | 6,163,000
-| [[San Salvador]]
+| [[San Salvador|ᎾᏍᎦᏅᎾ ᏌᎵᏩᏙᎠ]]
 |-
 | [[Guatemala|ᎫᏩᏖᎹᎳ]]
 | align="right" | 108,889
 | align="right" | 14,027,000
-| [[Guatemala City|ᎫᏩᏖᎹᎳ ᎦᏚᎲᎢ]]
+| [[Guatemala City|ᎫᏩᏖᎹᎳ ᎦᏚᎲ]]
 |-
-| [[Honduras]]
+| [[Honduras|ᎭᏂᏚᎳᏏ]]
 | align="right" | 112,492
 | align="right" | 7,466,000
-| [[Tegucigalpa]]
+| [[Tegucigalpa|ᏖᎫᏏᎦᎵᏆ]]
 |-
-| [[Nicaragua]]
+| [[Nicaragua|ᏂᎧᎳᎫᏩ]]
 | align="right" | 130,373
 | align="right" | 5,743,000
 | [[Managua|ᎹᎾᎫᏩ]]
 |-
-| [[Panama]] <ref name="two" /><ref>Panama is generally considered a North American country, though some authorities divide it at the [[Panama Canal]]. Figures listed here are for the entire country.</ref>
+| [[Panama|ᏆᎾᎹ]] <ref name="two" /><ref>Panama is generally considered a North American country, though some authorities divide it at the [[Panama Canal]]. Figures listed here are for the entire country.</ref>
 | align="right" | 75,417
 | align="right" | 3,454,000
-| [[Panama City]]
+| [[Panama City|ᏆᎾᎹ ᎦᏚᎲ]]
 |- style=" font-weight:bold; " class="sortbottom"
 ! Total
 | align="right" | 24,500,995
