*Empty MediaWiki Message*

--- a/ᏧᎦᎾᏮ_ᎠᎹᏰᏟ.mw
+++ b/ᏧᎦᎾᏮ_ᎠᎹᏰᏟ.mw
@@ -10,75 +10,75 @@
 ! [[Population|ᎾᏂᎥ ᏴᏫ]]<ref>[http://unstats.un.org/unsd/demographic/products/dyb/dyb2008/Table03.pdf "Demographic Yearbook: Table 3: Population by sex, rate of population increase, surface area and density."] United Nations Statistics Division, 2008 (2010-10-14)</ref>
 ! [[Capital|ᎠᏰᎵ ᏗᎦᎳᏫᎢᏍᏗ]]
 |-
-| [[Argentina]]
+| [[Argentina|ᎠᏤᏂᏘᎾ]]
 | align="right" | 2,766,890
 | align="right" | 40,482,000
-| [[Buenos Aires]]
+| [[Buenos Aires|ᏇᏃᏍ-ᎡᏫᏏ]]
 |-
-| [[ᏬᎵᏮᎠ]]
+| [[ᏉᎵᏫᏯ]]
 | align="right" | 1,098,580
 | align="right" | 9,863,000
-| [[La Paz, Bolivia|La Paz]] ᎠᎴ [[Sucre, Bolivia|Sucre]]
+| [[La Paz, Bolivia|La Paz]] ᎠᎴ [[Sucre|ᏑᏞ]]
 |-
-| [[Brazil|ᏆᏏᎵᎢ]]
+| [[Brazil|ᏆᏏᎵ]]
 | align="right" | 8,514,877
 | align="right" | 191,241,714
-| [[Brasilia]]
+| [[Brasilia|ᏆᏏᎵᎠ]]
 |-
-| [[Chile]]
+| [[Chile|ᏥᎵ]]
 | align="right" |  756,950
 | align="right" | 16,928,873
-| [[Santiago]]
+| [[Santiago|ᏌᏂᏘᎠᎪ]]
 |-
-| [[Colombia]]
+| [[Colombia|ᎧᎳᎻᏈᏯ]]
 | align="right" | 1,138,910
 | align="right" | 45,928,970
-| [[Bogotá]]
+| [[Bogotá|ᏉᎪᏔ]]
 |-
-| [[Ecuador]]
+| [[Ecuador|ᎡᏆᏙᎠ]]
 | align="right" |   283,560
 | align="right" | 14,573,101
-| [[Quito]]
+| [[Quito|ᏈᏙ]]
 |-
 | [[Falkland Islands]] ([[United Kingdom|ᎩᎵᏏᏲ]])
 | align="right" |  12,173
 | align="right" | 3,140
 | [[Port Stanley]]
 |-
-| [[French Guiana|ᎦᎸᏥ ᎦᎢᏯᏂ]] ([[France|ᎦᎸᏥᏱ]])
+| [[French Guiana|ᎦᎸᏥ ᎦᏯᎾ]] ([[France|ᎦᎸᏥᏱ]])
 | align="right" | 442
 | align="right" | 88,000
-| [[Cayenne, French Guiana|Cayenne]]
+| [[Cayenne, French Guiana|ᎧᏰᏂ]]
 |-
-| [[Guyana|ᎫᏯᎾ]]
+| [[Guyana|ᎦᏯᎾ]]
 | align="right" |  214,999
 | align="right" | 772,298
 | [[Georgetown, Guyana|Georgetown]]
 |-
-| [[Paraguay]]
+| [[Paraguay|ᏆᎳᏇᎢ]]
 | align="right" |   406,750
 | align="right" | 6,831,306
-| [[Asunción]]
+| [[Asunción|ᎠᏑᏂᏏᏲᏂ]]
 |-
-| [[Peru]]
+| [[Peru|ᏇᎷ]]
 | align="right" | 1,285,220
 | align="right" | 29,132,013
 | [[Lima, Peru|ᎵᎹ]]
 |-
-| [[Suriname]]
+| [[Suriname|ᏑᎵᎾᎻ]]
 | align="right" | 163,270
 | align="right" | 472,000
-| [[Paramaribo]]
+| [[Paramaribo|ᏆᎳᎹᎵᏉ]]
 |-
-| [[Uruguay]]
+| [[Uruguay|ᎤᎷᏇᏱ]]
 | align="right" | 176,220
 | align="right" | 3,477,780
-| [[Montevideo]]
+| [[Montevideo|ᎼᏂᏖᏫᏕᎣ]]
 |-
-| [[Venezuela]]
+| [[Venezuela|ᏪᏁᏑᏪᎳ]]
 | align="right" | 912,050
 | align="right" | 26,814,843
-| [[Caracas]]
+| [[Caracas|ᎧᎳᎧᏏ]]
 |
 |}
 
@@ -89,89 +89,89 @@
 [[File:Indios da tribo Tucuxi participam do Fórum Social Mundial 1006 FP6469.jpg|thumb|right|200px||ᏆᏏᎵᎢ ᎡᎯᏯᎢ [[family|ᏚᏓᏘᏳᎥᎢ]]]]
 <div style="font-size:100%;-moz-column-count:2; column-count:2;">
 <!--This list is incomplete -->
-* [[Alacalufe]], Chile
-* [[Amanyé]], ᏆᏏᎵᎢ
-* [[Arawaks]], Colombia, [[French Guiana|ᎦᎸᏥ ᎦᎢᏯᏂ]], [[Guyana|ᎫᏯᎾ]], Suriname, Venezuela
-* [[Arhuaco]], Colombia
-* [[Atacameño]], Chile
-* [[Aymara]], Bolivia
-* [[Awá]], ᏆᏏᎵᎢ, Colombia
-* [[Banawa]] ([[Baniwa]]), ᏆᏏᎵᎢ 
-* [[Cañari]], Ecuador
-* [[Caingang]], ᏆᏏᎵᎢ
-* [[Chayahuita]], Peru
-* [[Chibcha]], Colombia
-* [[Cocama]], ᏆᏏᎵᎢ, Colombia, Peru
-* [[Coconuco]], Colombia
-* [[Cumanagoto]], Colombia, Veneuela
-* [[Diaguita]], Argentina, Chile
-* [[Dowlut]], ᏆᏏᎵᎢ 
-* [[Enawene Nawe]], ᏆᏏᎵᎢ 
-* [[Enxet]], Paraguay
-* [[Gê]], Bolivia, ᏆᏏᎵᎢ, Paraguay
-* [[Guambiano]], Colombia
-* [[Guanes]], Colombia
-* [[Guaraní]], Argentina, Bolivia, ᏆᏏᎵᎢ, Paraguay
-* [[Inga people|Inga]], Colombia
+* [[Alacalufe|ᎠᏂᎳᎧᎷᏪ]], Chile
+* [[Amanyé|ᎠᏂᎹᏂᏰ]], ᏆᏏᎵᎢ
+* [[Arawaks|ᎠᏂᎳᏩᎧ]], Colombia, [[French Guiana|ᎦᎸᏥ ᎦᎢᏯᏂ]], [[Guyana|ᎫᏯᎾ]], Suriname, Venezuela
+* [[Arhuaco|ᎠᏂᎷᏩᎪ]], Colombia
+* [[Atacameño|ᎠᏂᏔᎧᎺᏂᏲ]], Chile
+* [[Aymara|ᎠᏂᎢᎹᎳ]], Bolivia
+* [[Awá|ᎠᏂᏩ]], ᏆᏏᎵᎢ, Colombia
+* [[Banawa|ᎠᏂᏩᎾᏩ]] ([[Baniwa]]), ᏆᏏᎵᎢ 
+* [[Cañari|ᎠᏂᎧᏂᏯᎵ]], Ecuador
+* [[Caingang|ᎠᏂᎧᎢᏂᎦᏂᎩ]], ᏆᏏᎵᎢ
+* [[Chayahuita|ᎠᏂᏣᏯᏫᏔ]], Peru
+* [[Chibcha|ᎠᏂᏥᏆᏣ]], Colombia
+* [[Cocama|ᎠᏂᎪᎧᎹ]], ᏆᏏᎵᎢ, Colombia, Peru
+* [[Coconuco|ᎠᏂᎪᎪᏄᎪ]], Colombia
+* [[Cumanagoto|ᎠᏂᎫᎹᎾᎪᏙ]], Colombia, Veneuela
+* [[Diaguita|ᎠᏂᏗᎠᎩᏔ]], Argentina, Chile
+* [[Dowlut|ᎠᏂᏙᎷᏘ]], ᏆᏏᎵᎢ 
+* [[Enawene Nawe|ᎠᏂᎡᎾᏪᏁ-ᎾᏪ]], ᏆᏏᎵᎢ 
+* [[Enxet|ᎠᏂᎡᏂᏎᏘ]], Paraguay
+* [[Gê|ᎠᏂᎨ]], Bolivia, ᏆᏏᎵᎢ, Paraguay
+* [[Guambiano|ᎠᏂᎫᏩᎻᏈᎠᏃ]], Colombia
+* [[Guanes|ᎠᏂᎫᏩᏁᏏ]], Colombia
+* [[Guaraní|ᎠᏂᎫᏩᎳᏂ]], Argentina, Bolivia, ᏆᏏᎵᎢ, Paraguay
+* [[Inga people|ᎠᏂᎢᏂᎦ]], Colombia
 * [[Juris]], ᏆᏏᎵᎢ
-* [[Kalias]], ᏆᏏᎵᎢ
-* [[Kamayurá|Kamayurá (Kamaiurá)]], ᏆᏏᎵᎢ
-* [[Kamsá]] (Sibundoy), Colombia
-* [[Kankuamo]], Colombia
+* [[Kalias|ᎠᏂᎧᎵᎠᏏ]], ᏆᏏᎵᎢ
+* [[Kamayurá|ᎠᏂᎧᎹᏳᎳ]], ᏆᏏᎵᎢ
+* [[Kamsá|ᎠᏂᎧᎻᏌ]] (Sibundoy), Colombia
+* [[Kankuamo|ᎠᏂᎧᏂᏆᎼ]], Colombia
 * [[Karajá]], ᏆᏏᎵᎢ
-* [[Kayapo]] ([[Caiapo]]), ᏆᏏᎵᎢ
-* [[Kolla]], Argentina
-* [[Kogui]]/Kággaba, Colombia
-* [[Kubeo]], ᏆᏏᎵᎢ
-* [[Mapuche]], Argentina ᎠᎴ Chile
-* [[Marinahas]], ᏆᏏᎵᎢ
-* [[Matsés]], ᏆᏏᎵᎢ
-* [[Mayoruna]], ᏆᏏᎵᎢ
-* [[Mokaná]], Colombia
-* [[Munduruku]], ᏆᏏᎵᎢ
-* [[Muisca]], Colombia
-* [[Nambikwara]], ᏆᏏᎵᎢ
-* [[Ofayé]], ᏆᏏᎵᎢ
-* [[Pacabuy]], Colombia
-* [[Paez people|Páez]]/Nasa, Colombia
-* [[Panará]], ᏆᏏᎵᎢ
-* [[Pastos]], Colombia
-* [[Pataxó]], ᏆᏏᎵᎢ
-* [[Pehuenche]], Argentina, Chile
+* [[Kayapo|ᎠᏂᎧᏯᏉ]] ([[Caiapo]]), ᏆᏏᎵᎢ
+* [[Kolla|ᎠᏂᎪᎳ]], Argentina
+* [[Kogui|ᎠᏂᎪᎩ]]/Kággaba, Colombia
+* [[Kubeo|ᎠᏂᎫᏇᎣ]], ᏆᏏᎵᎢ
+* [[Mapuche|ᎠᏂᎹᏊᏤ]], Argentina ᎠᎴ Chile
+* [[Marinahas|ᎠᏂᎹᎵᎾᎭᏏ]], ᏆᏏᎵᎢ
+* [[Matsés|ᎠᏂᎹᏤᏏ]], ᏆᏏᎵᎢ
+* [[Mayoruna|ᎠᏂᎹᏲᎷᎾ]], ᏆᏏᎵᎢ
+* [[Mokaná|ᎠᏂᎼᎧᎾ]], Colombia
+* [[Munduruku|ᎠᏂᎽᏂᏚᎷᎫ]], ᏆᏏᎵᎢ
+* [[Muisca|ᎠᏂᎽᎢᏍᎧ]], Colombia
+* [[Nambikwara|ᎠᏂᎾᎻᏈᏆᎳ]], ᏆᏏᎵᎢ
+* [[Ofayé|ᎠᏂᎣᏩᏰ]], ᏆᏏᎵᎢ
+* [[Pacabuy|ᎠᏂᏆᎧᏊᎢ]], Colombia
+* [[Paez people|ᎠᏂᏆᎡᏏ]]/Nasa, Colombia
+* [[Panará|ᎠᏂᏆᎾᎳ]], ᏆᏏᎵᎢ
+* [[Pastos|ᎠᏂᏆᏍᏙᏏ]], Colombia
+* [[Pataxó|ᎠᏂᏆᏔᏐ]], ᏆᏏᎵᎢ
+* [[Pehuenche|ᎠᏂᏇᏪᏂᏎ]], Argentina, Chile
 * [[Pijao]], Colombia
-* [[Pirahã]], ᏆᏏᎵᎢ
-* [[Quechua]], Argentina, Bolivia, Colombia, Chile, Ecuador, ᎠᎴ Perú
-* [[Quilombolo]], ᏆᏏᎵᎢ
-* [[Shipibo]], ᏆᏏᎵᎢ, Peru
-* [[Shuar]], Ecuador, Peru
-* [[Suruí]], ᏆᏏᎵᎢ
-* [[Sutagaos]], Colombia
-* [[Tama]], Colombia
-* [[Tapirape]], ᏆᏏᎵᎢ
-* [[Terena]], ᏆᏏᎵᎢ
-* [[Ticuna]], ᏆᏏᎵᎢ
-* [[Toba]], Argentina
-* [[Totoró]], Colombia
-* [[Tremembé]], ᏆᏏᎵᎢ
-* [[Tupi]], ᏆᏏᎵᎢ
-* [[Tupiniquim]] (Tupinikim), ᏆᏏᎵᎢ
-* [[Umbrá]], Colombia
-* [[Urarina]]
-* [[U'wa]], Colombia
-* [[Wai Wai]]
-* [[Waorani]], ᏆᏏᎵᎢ
-* [[Wichí]], Argentina
-* [[Wiwa]], Colombia
-* [[Xavante]], ᏆᏏᎵᎢ
-* [[Xokó]], ᏆᏏᎵᎢ
-* [[Xucuru]], ᏆᏏᎵᎢ
-* [[Yagua]], Peru
-* [[Yanacona]], Colombia
-* [[Yanomami]] ([[Yanomamo]]), ᏆᏏᎵᎢ, Venezuela
-* [[Yawanawa]], ᏆᏏᎵᎢ
-* [[Zapara]], Ecuador, Peru
-* [[Zuruaha]], ᏆᏏᎵᎢ
-* [[Zemborya]], ᏆᏏᎵᎢ
+* [[Pirahã|ᎠᏂᏈᎳᎭ]], ᏆᏏᎵᎢ
+* [[Quechua|ᎠᏂᎨᏧᏩ]], Argentina, Bolivia, Colombia, Chile, Ecuador, ᎠᎴ Perú
+* [[Quilombolo|ᎠᏂᎩᎶᎻᏉᎶ]], ᏆᏏᎵᎢ
+* [[Shipibo|ᎠᏂᏏᏈᏉ]], ᏆᏏᎵᎢ, Peru
+* [[Shuar|ᎠᏂᏑᎠ]], Ecuador, Peru
+* [[Suruí|ᎠᏂᏑᎷᎢ]], ᏆᏏᎵᎢ
+* [[Sutagaos|ᎠᏂᏑᏔᎦᎣᏏ]], Colombia
+* [[Tama|ᎠᏂᏔᎹ]], Colombia
+* [[Tapirape|ᎠᏂᏔᏈᎳᏇ]], ᏆᏏᎵᎢ
+* [[Terena|ᎠᏂᏖᎴᎾ]], ᏆᏏᎵᎢ
+* [[Ticuna|ᎠᏂᏘᎫᎾ]], ᏆᏏᎵᎢ
+* [[Toba|ᎠᏂᏙᏆ]], Argentina
+* [[Totoró|ᎠᏂᏙᏙᎶ]], Colombia
+* [[Tremembé|ᎠᏂᏞᎺᎻᏇ]], ᏆᏏᎵᎢ
+* [[Tupi|ᎠᏂᏚᏈ]], ᏆᏏᎵᎢ
+* [[Tupiniquim|ᎠᏂᏚᏈᏂᎩᎻ]] (Tupinikim), ᏆᏏᎵᎢ
+* [[Umbrá|ᎠᏂᎤᎻᏆ]], Colombia
+* [[Urarina|ᎠᏂᎤᎳᎵᎾ]]
+* [[U'wa|ᎠᏂᎤᏩ]], Colombia
+* [[Wai Wai|ᎠᏂᏩᎢᏩᎢ]]
+* [[Waorani|ᎠᏂᏩᎣᎳᏂ]], ᏆᏏᎵᎢ
+* [[Wichí|ᎠᏂᏫᏥ]], Argentina
+* [[Wiwa|ᎠᏂᏫᏩ]], Colombia
+* [[Xavante|ᎠᏂᏌᏩᏂᏖ]], ᏆᏏᎵᎢ
+* [[Xokó|ᎠᏂᏐᎪ]], ᏆᏏᎵᎢ
+* [[Xucuru|ᎠᏂᏑᎫᎷ]], ᏆᏏᎵᎢ
+* [[Yagua|ᎠᏂᏯᎫᏩ]], Peru
+* [[Yanacona|ᎠᏂᏯᎾᎪᎾ]], Colombia
+* [[Yanomami|ᎠᏂᏯᏃᎹᎻ]] ([[Yanomamo]]), ᏆᏏᎵᎢ, Venezuela
+* [[Yawanawa|ᎠᏂᏯᏩᎾᏩ]], ᏆᏏᎵᎢ
+* [[Zapara|ᎠᏂᏌᏆᎳ]], Ecuador, Peru
+* [[Zuruaha|ᎠᏂᏑᎷᎠᎭ]], ᏆᏏᎵᎢ
+* [[Zemborya|ᎠᏂᏎᎻᏉᎳᏯ]], ᏆᏏᎵᎢ
 </div>
 
 == ᎯᎪᏩᏔ ᎾᏍᎦ ᎾᏍᏇ ==
