--- a/ᏫᎾᏏ.mw
+++ b/ᏫᎾᏏ.mw
@@ -1,6 +1,16 @@
-[[File:Venus_de_Milo_Louvre_Ma399.jpg|thumb|200px|ᏫᎾᏏ]]
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|-
+| style="background:#cef2e0;" align="center" colspan=2 |
+{| border="0" cellpadding="1" cellspacing="0"
+|-
+| align="center" width="140px" | <big><big><big>'''ᏫᎾᏏ'''</big></big></big>
+|}
+|-
+| align=center colspan=2 |[[File:Venus_de_Milo_Louvre_Ma399.jpg|200px]]
+|-
+|}
 
-<big>'''ᏫᎾᏏ'''</big> ᎠᎶᎻ ᎤᏁᎳᏅᎯ ᎠᎨᏴ ᎠᏓᎨᏳᏗ ᎨᏒᎢ.
+<big>'''ᏫᎾᏏ'''</big> ([[ᎶᎻ]]: '''Venus''') ᎠᎶᎻ [[ᎤᏁᎳᏅᎯ ᎠᎨᏴ]] ᎠᏓᎨᏳᏗ ᎨᏒᎢ.
 
 [[ab:Венера]]
 [[an:Venus (mitolochía)]]
