*Empty MediaWiki Message*

--- a/ᎢᎣᎷ.mw
+++ b/ᎢᎣᎷ.mw
@@ -10,7 +10,7 @@
 |-
 |}
 
-<big>'''ᎢᎣᎷ'''</big> ([[ᎶᎻ]]: '''Αίολος''' ''Æolus'') ᎠᎶᎻ ᎤᏁᎳᏅᎯ [[ᎤᏃᎴ]] ᎨᏒᎢ.
+<big>'''ᎢᎣᎷ'''</big> ([[ᎪᎢ]]: '''Αίολος''' ''Æolus'') ᎠᎪᎢ ᎤᏁᎳᏅᎯ [[ᎤᏃᎴ]] ᎨᏎᎢ.
 
 [[az:Eol (mifologiya)]]
 [[bn:আইওলুস (হেল্লেনের পুত্র)]]
