--- a/ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ_ᎾᎿ_ᎠᎺᏰᏟ.mw
+++ b/ᏌᏊᎢᏳᎾᎵᏍᏔᏅᏍᎦᏚᎩ_ᎾᎿ_ᎠᎺᏰᏟ.mw
@@ -1,4 +1,4 @@
-[[File:Flag of the United States.svg|thumb|ᎠᎹᏰᏟ ᎦᏓᏘ]]
+[[File:Flag of the United States.svg|thumb|ᎠᎺᎵᎨ ᎦᏓᏘ]]
 [[File:Map of USA with state names chr.svg|thumb|50 ᎧᏃᎮᎭ ᎡᎶᎯ ᏓᏟᎶᏍᏔᏅ]]
 '''ᎠᎺᎵᎨ''' — ᎤᏴᏢᎢ-ᎠᎺᎵᎦ ᎠᏰᎵ ᎤᏙᏢᏒ ᏭᏕᎵᎬᏗᏢ ᎠᏰᎵ-ᎢᏴ ᎠᎳᏍᎦᎶᏗ ᎨᏒ, ᎤᎭ ᎬᏩᏚᏫᏛ 290,000,000 ᎠᏂᎤᏁᎦ. ᏄᎬᏫᏳᏌᏕᎩ, ᏗᎧᏃᏩᏛᏍᏗ ᏓᏃᏢᏍᎬ, ᎠᎴ [[United States Supreme Court|ᏗᏓᏱᎵᏓᏍᏗ (Judicial)]] ᏧᏂᎸᏫᏍᏓᏁᏗ ᎨᎦᏓᏅᏖᎮᎯ ᎨᏒᎢ. [[ᎠᏂᏍᏆᏂᎢ]] ᎠᎴ [[ᎧᎾᏓ]].
 
