*Empty MediaWiki Message*

--- a/ᎠᏂᏙᎢᏥ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᎠᏂᏙᎢᏥ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -1,5 +1,7 @@
-[[File:Map German World.png|300px|thumb|ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ [[ᎡᎶᎯ]]-Ꭿ]]
-'''ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ''' ᎠᎴᏅᏙᏗ [[ᏍᏆᏂ]], [[ᏳᎳᏛ]]-Ꭿ. 200,000,000 ᎠᏂᏴᏫ ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ ᎠᏬᏂᎭ. 
+[[File:Map German World.png|300px|thumb|ᎠᏂᏙᎢᏥ ᎦᏬᏂᎯᏍᏗ [[ᎡᎶᎯ]]-Ꭿ]]
+
+<big>'''ᎠᏂᏙᎢᏥ ᎦᏬᏂᎯᏍᏗ'''</big> ᎠᎴᏅᏙᏗ [[ᏍᏆᏂ]], [[ᏳᎳᏈ]]-Ꭿ. 200,000,000 ᎠᏂᏓᏥ ᎦᏬᏂᎯᏍᏗ ᎠᏬᏂᎭ. 
+
 {| class="wikitable" style="border=1px solid grey;"
 ! ᏣᎳᎩ !! ᎠᏛᏥ ᎦᏬᏂᎯᏍᏗ
 |-
