--- a/ᎠᏂᏉᏧᎦᎵ.mw
+++ b/ᎠᏂᏉᏧᎦᎵ.mw
@@ -1,6 +1,6 @@
 {| border=1 align=right cellpadding=4 cellspacing=0 width=400 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
 |-
-| style="background:#cef2e0;" align="center" colspan=2 |
+| style="background:#f9f9f9;" align="center" colspan=2 |
 {| border="0" cellpadding="1" cellspacing="0"
 |-
 | align="center" width="140px" | <big><big><big>'''ᎠᏂᏉᏧᎦᎵ''' </big></big></big> <br> <big>'''''Portugueses'''''</big>
@@ -59,7 +59,7 @@
 |-
 |}
 
-<big>'''ᎠᏂᏉᏧᎦᎵ'''</big> ᎠᏂᏴᏩ [[ᏉᏧᎦᎵ]] ᎠᎴ [[ᏆᏏᎵ]] ᎡᎯ. ᎠᏂᏉᏧᎦᎵ [[ᎠᏂᏉᏧᎦᎵ ᎧᏬᏂᎯᏍᏗ|ᏉᏧᎦᎵ]] ᎠᏂᏬᏂᎭ.
+<big>'''ᎠᏂᏉᏧᎦᎵ'''</big> ᎠᏂᏴᏩ [[ᏉᏧᎦᎵ]] ᎡᎯ. ᎠᏂᏉᏧᎦᎵ [[ᎠᏂᏉᏧᎦᎵ ᎧᏬᏂᎯᏍᏗ|ᏉᏧᎦᎵ]] ᎠᏂᏬᏂᎭ.
 
 [[af:Portugese]]
 [[ar:برتغاليون]]
