*Empty MediaWiki Message*

--- a/ᏆᏏᎵ.mw
+++ b/ᏆᏏᎵ.mw
@@ -11,7 +11,7 @@
 | ᎠᏕᎳ = [[ᏆᏏᎵ ᎠᏕᎳ]]
 }}
 
-<big>'''ᏉᏧᎦᎵ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏧᎦᎾᏮ ᎠᎹᏰᏟ|ᏧᎦᎾᏮ ᎠᎹᏰᏠᎢ]].
+<big>'''ᏆᏏᎵ'''</big> ᏙᏱᏗᏢ ᎦᏚᎲ [[ᏧᎦᎾᏮ ᎠᎹᏰᏟ|ᏧᎦᎾᏮ ᎠᎹᏰᏠᎢ]].
 
 [[ace:Brasil]]
 [[kbd:Бразил]]
