*Empty MediaWiki Message*

--- a/ᎤᎬᏫᏳᎯ_ᎡᏆ_ᏇᏠ_II.mw
+++ b/ᎤᎬᏫᏳᎯ_ᎡᏆ_ᏇᏠ_II.mw
@@ -1,1 +1,68 @@
+{| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
+|-
+| style="background:#D3D3A4;" align="center" colspan=2 |
+{| border="0" cellpadding="1" cellspacing="0"
+|-
+| align="center" width="200px" | <big><big><big>'''ᏇᏠ II'''</big></big></big> <br> ''Pedro II''
+|}
+|-
+| align=center colspan=2 | [[File:Dom_Pedro_II_circa_1887.jpg|250px]]
+|-
+| '''ᏚᏙᎥ''' || ᏇᏠ Ꮥ ᎠᎵᎧᏂᏔᎳ ᏦᎠᎣ ᎧᎶᏏ ᎴᎣᏉᎵᏙ ᏌᎵᏩᏙᎠ ᏈᏈᎠᏃ ᎦᎸᏥᏍᎪ ᎡᎩᏎᏫᏯ Ꮥ ᏉᎳ ᎴᎣᎧᏗᎣ ᎻᎨᎵ ᎨᏈᎵ ᎳᏩᎡᎵ ᎪᏂᏌᎦ <br> ''Pedro de Alcântara João Carlos Leopoldo Salvador Bibiano Francisco Xavier de Paula Leocádio Miguel Gabriel Rafael Gonzaga''
+|-
+| '''ᎤᏕᏘᏱᏍᎬ''' || ᎥᏍᎩᏱ 2, 1825 <br> [[Palace of São Cristóvão|ᏌᎣ-ᏈᏍᏙᏩᎣ ᎤᎬᏫᏳᎯ ᎠᏂᏁᎸ]], [[ᎵᎣ-Ꮥ-ᏣᏁᎢᎶ]]
+|-
+| '''ᎤᏲᎱᏒᎢ''' || ᎥᏍᎩᏱ 5, 1891 <br> [[Paris|ᏆᎵᏏ]], [[ᎦᎸᏥᏱ]]
+|-
+| '''ᎠᏁᎵ''' || [[Teresa Cristina of the Two Sicilies|ᏖᏫᏌ ᏈᏍᏘᎾ ᏔᎵ ᏏᏏᎵᏱ ᎡᎯ]]
+|-
+| '''ᎤᏙᏓ''' || [[Pedro I of Brazil|ᏇᏠ I ᏆᏏᎵ ᎡᎯ]]
+|-
+| '''ᎤᏥ''' || [[Maria Leopoldina of Austria|ᎹᎵᏯ ᎴᎣᏉᎵᏗᎾ ᎣᏍᏟᏯ ᎡᎯ]]
+|-
+| '''ᏚᏙᎥᎪᏪᎸ''' || [[File:Signature_Pedro_II.png|150px]]
+|-
+|}
+
+[[an:Pero II de Brasil]]
+[[ar:بيدرو الثاني]]
+[[bg:Педро II (Бразилия)]]
+[[ca:Pere II de Brasil]]
+[[cs:Petr II. Brazilský]]
+[[da:Pedro 2. af Brasilien]]
+[[de:Peter II. (Brasilien)]]
+[[el:Πέτρος Β' της Βραζιλίας]]
+[[en:Pedro II of Brazil]]
+[[eo:Petro la 2-a (imperiestro de Brazilo)]]
+[[es:Pedro II de Brasil]]
+[[et:Pedro II (Brasiilia)]]
+[[fa:پدروی دوم]]
+[[fi:Pedro II]]
+[[fr:Pierre II du Brésil]]
+[[gl:Pedro II do Brasil]]
+[[he:פדרו השני, קיסר ברזיל]]
+[[hr:Pedro II. Brazilski]]
+[[hu:II. Péter brazil császár]]
+[[id:Pedro II dari Brasil]]
+[[it:Pietro II del Brasile]]
+[[ja:ペドロ2世 (ブラジル皇帝)]]
+[[ka:პედრუ II (ბრაზილია)]]
+[[ko:페드루 2세 (브라질)]]
+[[la:Petrus II (imperator Brasiliae)]]
+[[mr:दुसरा पेद्रो, ब्राझिल]]
+[[nl:Peter II van Brazilië]]
+[[no:Pedro II av Brasil]]
+[[pl:Piotr II (cesarz Brazylii)]]
+[[pt:Pedro II do Brasil]]
+[[ro:Pedro al II-lea al Braziliei]]
+[[ru:Педру II (император Бразилии)]]
+[[simple:Pedro II of Brazil]]
+[[sl:Pedro II. Brazilski]]
+[[sr:Педро II од Бразила]]
+[[sv:Peter II av Brasilien]]
+[[tr:II. Pedro (Brezilya)]]
+[[uk:Педру II (імператор Бразилії)]]
+[[vi:Pedro II của Brasil]]
+[[zh:佩德罗二世 (巴西)]]
+
 <big>'''ᏈᏓ'''</big> ᎠᎴ <big>'''ᏇᏠ II'''</big> ([[ᎠᏂᏉᏧᎦᎵ ᎧᏬᏂᎯᏍᏗ|ᏉᏧᎦᎵ]]: '''Pedro II'''; ᎥᏍᎩᏱ 2‚ 1825 – ᎥᏍᎩᏱ 5‚ 1891) ᏔᎵᏁ [[ᏆᏏᎵ]] [[ᎤᎬᏫᏳᎯ ᎡᏆ]].
