--- a/ᏳᎧᎴᏂ.mw
+++ b/ᏳᎧᎴᏂ.mw
@@ -1,5 +1,5 @@
 {{Infobox Country
-| Long name = Российская Федерация
+| Long name = Україна
 | Name = ᏳᎧᏪᏂ
 | ᎦᏓᏘ = Flag_of_Ukraine.svg
 | Coat of arms = Lesser_Coat_of_Arms_of_Ukraine.svg
