*Empty MediaWiki Message*

--- a/ᎣᏂᏥ.mw
+++ b/ᎣᏂᏥ.mw
@@ -1,6 +1,6 @@
-[[File:OrangeBloss_wb.jpg|thumb|right|ᎠᏂᏥ]]
+[[File:OrangeBloss_wb.jpg|thumb|right|ᎣᏂᏥ]]
 
-<big>'''ᎠᏂᏥ'''</big> ᎤᏓᏔᏅ.
+<big>'''ᎣᏂᏥ'''</big> ᎤᏓᏔᏅ.
 
 [[Category:Plantae]]
 [[Category:ᏧᏓᏔᏅ]]
