*Empty MediaWiki Message*

--- a/ᏗᎧᏃᏗ.mw
+++ b/ᏗᎧᏃᏗ.mw
@@ -1,1 +1,231 @@
-#REDIRECT [[ᏗᎧᏃᏗ]]
+[[File:Colouring pencils.jpg|right|300px|thumb|ᎠᏑᏫᏍᏒ ᏗᎪᏪᎶᏗ]]
+ᏗᏑᏫᏍᏙᏗ (ᏗᏑᏫᏍᏗ<ref>Robinson 24</ref> ᏧᎨᎴᏅᏓ ᏗᎧᎬᏗ<ref>Cowen 49.</ref>) [[ᎬᎪᏩᏛᏗ ᏗᎧᏃᏗ]]. ᎢᎦᏛ ᏗᏑᏫᏍᏙᏗ ᎠᏎᏍᏗᎭ:
+
+{| class="wikitable"
+! ᏗᏑᏫᏒ
+! sample
+|- 
+| <big>'''[[ᎬᎿᎨᎢ]]'''</big>
+|  bgcolor="#000000" |
+|-
+| <big>'''[[ᎬᎿᎨᎤᏍᎪᎸ]]'''</big>
+|  bgcolor="#808080" |
+|-
+| <big>'''[[ᎠᏕᎸᎤᏁᎦ]]'''</big>
+|  bgcolor="#C0C0C0" |
+|-
+| <big>'''[[ᎤᏬᏗᎨ]]'''</big>
+|  bgcolor="#704214" |
+|-
+| <big>'''[[ᏌᎪᏂᎨ]]'''</big>
+|  bgcolor="#0000FF" |
+|-
+| '''[[ᏔᏉᎢᏏ-ᏌᎪᏂᎨᎢ]]'''
+|  bgcolor="#40E0D0" |
+|-
+| <big>'''[[ᎢᏤᏳᏍᏗ]]'''</big>
+|  bgcolor="#00AA00" |
+|-
+| '''[[ᎡᎻᎳ-ᎢᏤᏳᏍᏗ]]'''
+|  bgcolor="#50C878" |
+|-
+| '''[[ᎳᎢᎻ-ᎢᏤᏳᏍᏗ]]'''
+|  bgcolor="#BFFF00" |
+|-
+| <big>'''[[ᎩᎦᎨᏳᏍᏗ]]'''</big>
+|  bgcolor="#FFC0CB" |
+|-
+| <big>'''[[ᏕᎭᎷᎨᎢ]]'''</big> <br><small>ᎠᏛᎭᎵᎨ<ref name=con/> (ᎦᎨᏍᏗ<ref name=pr/> ᎠᎴ ᎩᎦᎨᎢᏳᏍᏗ)</small>
+|  bgcolor="#660099" |
+|-
+| <big>'''[[ᎩᎦᎨᎢ]]'''</big>
+|  bgcolor="#FF0000" |
+|-
+| <big>'''[[ᎣᏂᏥ]]'''</big><ref name=con>Cowen and Noble 99.</ref>
+|  bgcolor="#FF7F00" |
+|-
+| <big>'''[[ᎠᏕᎸᏓᎶᏂᎨᎢ]]'''</big>
+|  bgcolor="#FFD700" |
+|-
+| <big>'''[[ᏓᎶᏂᎨᎢ]]'''</big>
+|  bgcolor="#ffff00" |
+|-
+| '''[[ᏎᎷ-ᏓᎶᏂᎨᎢ]]'''
+|  bgcolor="#FBEC5D" |
+|-
+| <big>'''[[ᎤᏁᎦ]]'''</big>
+|  bgcolor="#FFFFFF" |
+|}
+
+[[File:Cadmiumred.jpg|10px|left]]
+ᎩᎦᎨ<br/>
+[[File:Cadmiumorange.jpg|left|10px]]
+ᎠᏓᎶᏂᎨ<ref name=pr>Robinson 107</ref> (ᎣᏂᏥ<ref name=con>Cowen and Noble 99.</ref>)<br/>
+[[File:Cadmiumyellowlight.jpg|left|10px]]
+ᏓᎶᏂᎨ</br>
+[[File:Chromiumoxidegreen.jpg|left|10px]]
+ᎢᏥᎢᏳᏍᏗ</br>
+[[File:Azul.png|left|10px]]
+ᏌᎪᏂᎨ</br>
+[[File:Solid purple.png|left|10px]]
+ᎠᏛᎭᎵᎨ<ref name=con/> (ᎦᎨᏍᏗ<ref name=pr/> ᎠᎴ ᎩᎦᎨᎢᏳᏍᏗ)</br>
+[[File:Quinacridoneviolet.jpg|left|10px]]
+ᎤᏐᎪᏍᏓᎩᎦᎨ
+[[File:Colora1.png|left|10px]]
+ᎦᎦᎨ ᎤᏍᎪᎸ<ref name=con/> (ᎩᎦᎨᎢᏳᏍᏗ)</br>
+[[File:Black 300.jpg|left|10px]]
+ᎬᎿᎨ</br>
+[[File:Solid white bordered.svg|left|20px]]
+ᎤᏁᎦ</br>
+[[File:Quinacridonegold.jpg|left|10px]]
+ᏬᏗ (ᎤᎧᏲᏓ ᎩᎦᎨ ᎠᎴ [[ᎦᏙᎯ]] ᏗᎧᏃᏗ)
+[[File:Solid brown.svg|left|10px]]
+ᎤᏬᏗᎨ</br>
+[[File:Solid gray.png|left|10px]]
+ᎬᎿᎨ ᎤᏍᎪᎸ<ref name=con/> (ᎤᏍᎪᎸᏌᎪᏂᎨ<ref name=pr/> ᎠᎴ ᎤᏍᎪᎸ)</br>
+[[File:Silver color.jpg|left|20px]]
+ᎠᎴᎸᎤᏁᎬ<ref name=pr/>
+
+[[File:Color circle (hue-sat).png|thumb|ᏗᎧᏃᏗ ᎦᏓᏆᎸ]]
+
+==ᏓᏓᏚᎬ ᎪᏪᎵ==
+<references/>
+
+==ᏫᏓᏎᏄᎢ==
+*Cowen, Agnes Spade. ''Cherokee English Language Reference Book.'' Welling, Oklahoma: Cross-Cultural Education Center, 1995.
+*Cowen, Agnes Spade and Jane B. Noble. ''Contemporary Cherokee Language Book.'' Tulsa, OK: Cross-Cultural Education Center, 1996.
+*Robinson, Prentice. ''Easy to Use Cherokee Dictionary.'' Tulsa: Cherokee Language and Culture, 1996.
+
+==ᏙᏯᏗᏢ ᏗᏕᎬᏔᏛ==
+{{Commonscat|Color}}
+* [http://sicyt.fadu.uba.ar/ingles/index.php Bibliography Database on Color Theory], Buenos Aires University
+* [http://www.physicstoday.org/vol-55/iss-7/p43.html Comparative article examining Goethean and Newtonian Color]
+* [http://www.research.ibm.com/people/l/lloydt/color/color.HTM Why Should Engineers and Scientists Be Worried About Color?]
+* Robert Ridgway's [http://contentdm.lindahall.org/u?/Natural_His,0 ''A Nomenclature of Colors'' (1886)] and [http://contentdm.lindahall.org/u?/Natural_His,174 ''Color Standards and Color Nomenclature'' (1912)] - text-searchable digital facsimiles at Linda Hall Library
+
+[[Category:ᏗᎧᏃᏗ| ]]
+
+[[af:Kleur]]
+[[am:ቀለም]]
+[[an:Color]]
+[[ar:لون]]
+[[arc:ܓܘܢܐ]]
+[[arz:لون]]
+[[ast:Color]]
+[[ay:Sami]]
+[[az:Rəng]]
+[[bat-smg:Spalva]]
+[[bcl:Kolor]]
+[[be:Колер]]
+[[be-x-old:Колер]]
+[[bg:Цвят (оптика)]]
+[[bn:রঙ]]
+[[br:Liv]]
+[[bs:Boja]]
+[[ca:Color]]
+[[ceb:Kolor]]
+[[ckb:ڕەنگ]]
+[[cr:Itasinâsowin]]
+[[cs:Barva]]
+[[cy:Lliw]]
+[[da:Farve]]
+[[de:Farbe]]
+[[el:Χρώμα]]
+[[en:Color]]
+[[eo:Koloro]]
+[[es:Color]]
+[[et:Värvus]]
+[[eu:Kolore]]
+[[ext:Colol]]
+[[fa:رنگ]]
+[[fi:Väri]]
+[[fiu-vro:Värm]]
+[[fr:Couleur]]
+[[fur:Colôr]]
+[[gan:色]]
+[[gl:Cor]]
+[[gn:Sa'y]]
+[[he:צבע]]
+[[hi:रंग]]
+[[hif:Rang]]
+[[hr:Boja]]
+[[ht:Koulè]]
+[[hu:Szín]]
+[[ia:Color]]
+[[id:Warna]]
+[[ig:Àgwà]]
+[[io:Koloro]]
+[[is:Litur]]
+[[it:Colore]]
+[[ja:色]]
+[[jbo:skari]]
+[[jv:Werna]]
+[[ka:ფერი]]
+[[kg:Langi]]
+[[kk:Түс]]
+[[kn:ಬಣ್ಣ]]
+[[ko:색]]
+[[la:Color]]
+[[lb:Faarf]]
+[[lbe:Ранг]]
+[[lmo:Culur]]
+[[ln:Lángi]]
+[[lt:Spalva]]
+[[lv:Krāsa]]
+[[mdf:Тюс]]
+[[mk:Боја]]
+[[ml:നിറം]]
+[[mn:Өнгө]]
+[[mr:रंग]]
+[[ms:Warna]]
+[[my:အရောင်]]
+[[myv:Тюс]]
+[[nah:Tlapālli]]
+[[nds:Klöör]]
+[[ne:रंग]]
+[[nl:Kleur]]
+[[nn:Farge]]
+[[no:Farge]]
+[[nrm:Couoleu]]
+[[nv:Nidaashchʼąąʼígíí]]
+[[oc:Color]]
+[[pl:Barwa]]
+[[pnb:رنگ]]
+[[pt:Cor]]
+[[qu:Llimphi]]
+[[ro:Culoare]]
+[[ru:Цвет]]
+[[rue:Фарба]]
+[[rw:Ibara]]
+[[scn:Culuri]]
+[[sco:Colour]]
+[[sh:Boja]]
+[[si:පාට]]
+[[simple:Color]]
+[[sk:Farba (fyzika)]]
+[[sl:Barva]]
+[[so:Midab]]
+[[sq:Ngjyra]]
+[[sr:Боја]]
+[[ss:Bâla]]
+[[stq:Faawe]]
+[[su:Warna]]
+[[sv:Färg]]
+[[sw:Rangi]]
+[[ta:நிறம்]]
+[[te:రంగు]]
+[[th:สี]]
+[[tl:Kulay]]
+[[tpi:Kala]]
+[[tr:Renk]]
+[[udm:Буёл]]
+[[uk:Колір]]
+[[ur:رنگ]]
+[[uz:Rang]]
+[[vi:Màu sắc]]
+[[wa:Coleur]]
+[[war:Kolor]]
+[[wo:Melo]]
+[[yi:קאליר]]
+[[zh:颜色]]
+[[zh-yue:色]]
