*Empty MediaWiki Message*

--- a/ᏗᎧᏃᏗ.mw
+++ b/ᏗᎧᏃᏗ.mw
@@ -2,7 +2,7 @@
 ᏗᏑᏫᏍᏙᏗ (ᏗᏑᏫᏍᏗ<ref>Robinson 24</ref> ᏧᎨᎴᏅᏓ ᏗᎧᎬᏗ<ref>Cowen 49.</ref>) [[ᎬᎪᏩᏛᏗ ᏗᎧᏃᏗ]]. ᎢᎦᏛ ᏗᏑᏫᏍᏙᏗ ᎠᏎᏍᏗᎭ:
 
 {| class="wikitable"
-! ᏗᏑᏫᏒ
+! ᏗᏑᏫᏍᏗ
 ! sample
 |- 
 | <big>'''[[ᎬᎿᎨᎢ]]'''</big>
