--- a/ᏗᎧᏃᏗ.mw
+++ b/ᏗᎧᏃᏗ.mw
@@ -103,7 +103,7 @@
 * [http://www.research.ibm.com/people/l/lloydt/color/color.HTM Why Should Engineers and Scientists Be Worried About Color?]
 * Robert Ridgway's [http://contentdm.lindahall.org/u?/Natural_His,0 ''A Nomenclature of Colors'' (1886)] and [http://contentdm.lindahall.org/u?/Natural_His,174 ''Color Standards and Color Nomenclature'' (1912)] - text-searchable digital facsimiles at Linda Hall Library
 
-[[Category:ᏗᎧᏃᏗ| ]]
+[[Category:ᏗᏑᏫᏍᏗ| ]]
 
 [[af:Kleur]]
 [[am:ቀለም]]
