--- a/ᎤᏅᏉᎳᏛ.mw
+++ b/ᎤᏅᏉᎳᏛ.mw
@@ -159,7 +159,7 @@
 * [http://mitworld.mit.edu/video/33/ Walter Lewin's Discussion on colors and rainbow physics]
 
 [[Category:ᎤᏁᎳᏅ ᎤᏬᏢᏅ]]
-[[Category:ᏗᎧᏃᏗ]]
+[[Category:ᏗᏑᏫᏍᏗ]]
 
 [[af:Reënboog]]
 [[an:Arco de Sant Chuan]]
