*Empty MediaWiki Message*

--- a/ᏌᎵ.mw
+++ b/ᏌᎵ.mw
@@ -1,8 +1,9 @@
-[[File:Screen shot 2010-09-13 at 9.06.46 PM.png]]
+[[File:Screen shot 2010-09-13 at 9.06.46 PM.png|thumb|right|ᏌᎵ]]
 
-'''ᏌᎵ''' ᎤᏓᎳᏅ ᎠᎦᏍᏗ.
+<big>'''ᏌᎵ'''</big> ᎤᏓᏔᏅ.
 
 [[Category:Plantae]]
+[[Category:ᏧᏓᏔᏅ]]
 
 [[ca:Caqui]]
 [[da:Kakifrugt]]
