--- a/ᎣᏂᏥ.mw
+++ b/ᎣᏂᏥ.mw
@@ -4,3 +4,113 @@
 
 [[Category:Plantae]]
 [[Category:ᏧᏓᏔᏅ]]
+
+[[ab:Апатырқал]]
+[[am:ብርቱካን (ፍሬ)]]
+[[an:Narancha (fruita)]]
+[[ar:برتقال]]
+[[arz:برتقان]]
+[[ast:Naranxa (frutu)]]
+[[az:Portağal]]
+[[be:Апельсін]]
+[[be-x-old:Апэльсін]]
+[[bg:Портокал]]
+[[bn:কমলা (ফল)]]
+[[bo:ཚ་ལུ་མ།]]
+[[br:Aouraval]]
+[[bs:Narandža]]
+[[ca:Taronja]]
+[[cs:Pomeranč]]
+[[cy:Oren (ffrwyth)]]
+[[da:Appelsin]]
+[[de:Orange (Frucht)]]
+[[dsb:Apelsina]]
+[[el:Πορτοκαλιά]]
+[[eml:Partugal]]
+[[en:Orange (fruit)]]
+[[eo:Oranĝo (frukto)]]
+[[es:Naranja (fruta)]]
+[[et:Apelsinipuu]]
+[[eu:Laranja]]
+[[fa:پرتقال]]
+[[fi:Appelsiini]]
+[[fr:Orange (fruit)]]
+[[ga:Oráiste (toradh)]]
+[[gl:Laranxa (froita)]]
+[[gu:સંતરુ (ફળ)]]
+[[gv:Oranje]]
+[[he:תפוז]]
+[[hi:संतरा (फल)]]
+[[hr:Naranča]]
+[[hsb:Apelsina]]
+[[ht:Zoranj]]
+[[hu:Narancs]]
+[[id:Jeruk manis]]
+[[io:Oranjo]]
+[[is:Appelsína]]
+[[it:Citrus × sinensis]]
+[[ja:オレンジ]]
+[[jv:Jeruk]]
+[[ka:ფორთოხალი]]
+[[kaa:Apelsin]]
+[[kk:Апельсин]]
+[[kn:ಕಿತ್ತಳೆ]]
+[[ko:오렌지]]
+[[la:Citrus sinensis]]
+[[lad:Portokal (fruto)]]
+[[lb:Orange (Fruucht)]]
+[[ln:Lilála]]
+[[lt:Apelsinas]]
+[[lv:Apelsīns]]
+[[ml:ഓറഞ്ച് (സസ്യം)]]
+[[mn:Жүрж]]
+[[mr:संत्रे]]
+[[mrj:Апельсин]]
+[[ms:Oren (buah)]]
+[[my:လိမ္မော်သီး]]
+[[nah:Naranjaxocotl]]
+[[nap:Pertegàll]]
+[[nds-nl:Appelsien]]
+[[nl:Sinaasappel]]
+[[nn:Appelsin]]
+[[no:Appelsin]]
+[[nv:Chʼil łitsxooí]]
+[[oc:Irange]]
+[[os:Апельсин]]
+[[pam:Dalandan]]
+[[pl:Pomarańcza]]
+[[pms:Citrus sinensis]]
+[[pt:Laranjeira]]
+[[qu:Chilina]]
+[[ro:Portocal]]
+[[sa:नारङ्गफलम्]]
+[[scn:Arancia]]
+[[sco:Oranger]]
+[[se:Appelsiidna]]
+[[sh:Naranča]]
+[[simple:Orange (fruit)]]
+[[sk:Pomaranč]]
+[[sl:Pomaranča]]
+[[sn:Ranjisi]]
+[[sq:Portokalli]]
+[[sr:Наранџа]]
+[[sv:Apelsin]]
+[[sw:Chungwa]]
+[[szl:Apluzina]]
+[[ta:நரந்தம்பழம்]]
+[[te:బత్తాయి]]
+[[th:ส้ม]]
+[[tl:Dalandan]]
+[[to:Moli]]
+[[tr:Portakal]]
+[[tum:Olenji]]
+[[ug:ئاپېلسىن]]
+[[uk:Апельсин]]
+[[vi:Cam]]
+[[vls:Seenappel]]
+[[war:Aranghitas (bunga)]]
+[[yi:מאראנץ]]
+[[yo:Ọsàn]]
+[[zh:橙]]
+[[zh-min-nan:Liú-teng]]
+[[zh-yue:橙]]
