*Empty MediaWiki Message*

--- a/ᎦᏩᏒᎩ.mw
+++ b/ᎦᏩᏒᎩ.mw
@@ -3,3 +3,60 @@
 <big>'''ᎦᏩᏒᎩ'''</big> ᎤᏓᏔᏅ.
 
 [[Category:ᏧᏓᏔᏅ]]
+
+[[ar:بطيخ]]
+[[az:Yemiş]]
+[[be-x-old:Дыня]]
+[[bg:Пъпеш]]
+[[bo:ཀུབ་མངར།]]
+[[ca:Melonera]]
+[[ch:Melon]]
+[[cs:Meloun cukrový]]
+[[da:Melon]]
+[[de:Zuckermelone]]
+[[el:Πεπόνι]]
+[[en:Muskmelon]]
+[[eo:Melono (frukto)]]
+[[es:Cucumis melo]]
+[[eu:Meloi]]
+[[fi:Meloni]]
+[[fr:Melon (plante)]]
+[[gl:Melón (froita)]]
+[[gn:Merõ]]
+[[he:מלון (פרי)]]
+[[hi:ककड़ी]]
+[[hsb:Dynja]]
+[[ht:Melon frans]]
+[[hu:Sárgadinnye]]
+[[id:Melon]]
+[[it:Cucumis melo]]
+[[ja:マスクメロン]]
+[[kaa:Qawın]]
+[[kk:Қауын]]
+[[ko:멜론]]
+[[la:Cucumis melo]]
+[[lt:Sėjamasis melionas]]
+[[lv:Melone]]
+[[ml:തയ്ക്കുമ്പളം]]
+[[nah:Melōn]]
+[[nl:Meloen (vrucht)]]
+[[no:Melon]]
+[[pl:Ogórek melon]]
+[[pt:Melão]]
+[[qu:Unukhachun]]
+[[ro:Pepene galben]]
+[[sc:Melone]]
+[[scn:Muluni di fedda]]
+[[sh:Dinja]]
+[[simple:Melon]]
+[[sr:Диња]]
+[[sv:Melon]]
+[[tg:Харбуза]]
+[[tk:Gawun]]
+[[tr:Kavun]]
+[[uk:Диня]]
+[[ur:خربوزہ]]
+[[vi:Dưa bở]]
+[[yi:מעלאן]]
+[[zh:厚皮甜瓜]]
+[[zh-min-nan:Me-lóng]]
