*Empty MediaWiki Message*

--- a/ᎳᎢᎻ.mw
+++ b/ᎳᎢᎻ.mw
@@ -4,3 +4,43 @@
 
 [[Category:Plantae]]
 [[Category:ᏧᏓᏔᏅ]]
+
+[[bg:Зелен лимон]]
+[[bs:Limeta]]
+[[ca:Llimona dolça]]
+[[cs:Limetka]]
+[[cv:Лайм]]
+[[da:Lime]]
+[[de:Limette]]
+[[en:Lime (fruit)]]
+[[eo:Limeo]]
+[[es:Lima (fruta)]]
+[[fi:Limetti]]
+[[fr:Lime (fruit)]]
+[[ga:Líoma (toradh)]]
+[[he:ליים]]
+[[hu:Zöldcitrom]]
+[[ja:ライム]]
+[[ko:라임]]
+[[la:Lumia]]
+[[lt:Rūgščiavaisis citrinmedis]]
+[[my:သံပရာ]]
+[[nah:Limōnxocotl]]
+[[nl:Limoen]]
+[[nn:Lime]]
+[[no:Lime]]
+[[nv:Chʼil dootłʼizhí díkʼǫ́zhígíí]]
+[[os:Лайм]]
+[[pl:Lima (roślina)]]
+[[pt:Lima (fruta)]]
+[[ro:Lămâie verde]]
+[[simple:Lime]]
+[[sk:Citrónovník limetový]]
+[[sl:Limeta]]
+[[sr:Лимета]]
+[[sv:Lime]]
+[[sw:Ndimu]]
+[[tr:Misket limonu]]
+[[uk:Лайм]]
+[[vi:Chanh]]
+[[zh:青檸]]
