--- a/ᎴᎹᏂ.mw
+++ b/ᎴᎹᏂ.mw
@@ -3,3 +3,113 @@
 <big>'''ᎴᎹᏂ'''</big> ᎤᏓᏔᏅ.
 
 [[Category:ᏧᏓᏔᏅ]]
+
+[[am:ሎሚ]]
+[[an:Limón]]
+[[ar:ليمون]]
+[[arz:لامون]]
+[[ast:Citrus limon]]
+[[az:Limon]]
+[[bat-smg:Cėtrėna]]
+[[be:Лімон]]
+[[be-x-old:Лімон]]
+[[bg:Лимон]]
+[[bn:লেবু]]
+[[bo:ལེ་མོན།]]
+[[br:Suraval]]
+[[bs:Limun]]
+[[ca:Llimoner]]
+[[cs:Citron]]
+[[cv:Лимон]]
+[[cy:Lemon]]
+[[da:Citron]]
+[[de:Zitrone]]
+[[dsb:Citronowy bom]]
+[[el:Λεμόνι]]
+[[en:Lemon]]
+[[eo:Citrono]]
+[[es:Citrus × limon]]
+[[et:Harilik sidrunipuu]]
+[[eu:Limoiondo]]
+[[fa:لیموترش]]
+[[fi:Sitruuna]]
+[[fr:Citron]]
+[[ga:Líomóid]]
+[[gl:Limón]]
+[[gu:લીંબુ]]
+[[gv:Limon]]
+[[he:לימון]]
+[[hi:नीबू]]
+[[hr:Limun]]
+[[hsb:Citronowc]]
+[[ht:Sitron]]
+[[hu:Citrom]]
+[[id:Sitrun]]
+[[io:Citrono]]
+[[is:Sítróna]]
+[[it:Citrus × limon]]
+[[ja:レモン]]
+[[jv:Lémon]]
+[[ka:ლიმონი]]
+[[kaa:Limon]]
+[[kk:Лимон]]
+[[kn:ನಿಂಬೆ]]
+[[ko:레몬]]
+[[koi:Лимон]]
+[[kv:Лимон]]
+[[la:Limon]]
+[[lb:Zitroun]]
+[[ln:Ndímo]]
+[[lt:Tikrasis citrinmedis]]
+[[lv:Citrons]]
+[[mk:Лимон]]
+[[ml:നാരകം]]
+[[mn:Нимбэг]]
+[[mrj:Лимон]]
+[[ms:Lemon]]
+[[my:ရှောက်]]
+[[nah:Limacuahuitl]]
+[[ne:कागती]]
+[[nl:Citroen (vrucht)]]
+[[nn:Sitron]]
+[[no:Sitron]]
+[[nv:Chʼil łitsooí díkʼǫ́zhígíí]]
+[[oc:Citron]]
+[[os:Лимон]]
+[[pl:Cytryna zwyczajna]]
+[[pms:Citrus limon]]
+[[pnb:نمبو]]
+[[ps:ليمو]]
+[[pt:Limão]]
+[[qu:Puquy k'allku]]
+[[ro:Lămâi]]
+[[sa:जम्बीरम्]]
+[[sc:Limone]]
+[[scn:Citrus limon]]
+[[sh:Limun]]
+[[simple:Lemon]]
+[[sl:Limona]]
+[[so:Liin dhanaan]]
+[[sq:Limoni]]
+[[sr:Limun]]
+[[su:Jeruk mipis]]
+[[sv:Citron]]
+[[sw:Limau]]
+[[ta:எலுமிச்சை]]
+[[te:నిమ్మ]]
+[[tg:Лимӯ]]
+[[th:เลมอน]]
+[[tl:Lemon]]
+[[to:Lemani]]
+[[tr:Limon]]
+[[tum:Zobala]]
+[[udm:Лимон]]
+[[uk:Лимон]]
+[[ur:لیموں]]
+[[vi:Chanh tây]]
+[[vo:Limoeiro]]
+[[war:Limon]]
+[[yi:לימענע]]
+[[zh:柠檬]]
+[[zh-min-nan:Lê-bóng]]
+[[zh-yue:檸檬]]
