*Empty MediaWiki Message*

--- a/ᏧᏣᏲᏍᏗ_ᏒᎦᏔ.mw
+++ b/ᏧᏣᏲᏍᏗ_ᏒᎦᏔ.mw
@@ -4,3 +4,30 @@
 
 [[Category:Plantae]]
 [[Category:ᏧᏓᏔᏅ]]
+
+[[az:Ananas]]
+[[bg:Ананас (род)]]
+[[cs:Ananasovník]]
+[[da:Ananas]]
+[[de:Ananas (Gattung)]]
+[[el:Ανανάς]]
+[[en:Ananas]]
+[[es:Ananas]]
+[[fr:Ananas (genre)]]
+[[hr:Ananasi]]
+[[hsb:Ananas (ród)]]
+[[it:Ananas]]
+[[ja:アナナス属]]
+[[ka:ანანასი]]
+[[kk:Ананас]]
+[[lt:Ananasas]]
+[[nl:Ananas (geslacht)]]
+[[no:Ananas]]
+[[oc:Ananàs]]
+[[pl:Ananas]]
+[[ps:اناناس]]
+[[sr:Ананас]]
+[[sv:Ananassläktet]]
+[[te:అనానాస్]]
+[[uk:Ананас (рід)]]
+[[vi:Chi Dứa]]
