*Empty MediaWiki Message*

--- a/ᏆᏄᎾᏍᏗ.mw
+++ b/ᏆᏄᎾᏍᏗ.mw
@@ -4,3 +4,26 @@
 
 [[Category:Plantae]]
 [[Category:ᏧᏓᏔᏅ]]
+
+[[bar:Zwetschgn]]
+[[de:Zwetschge]]
+[[dsb:Domacna slěwcyna]]
+[[el:Δαμάσκηνο]]
+[[en:Plum]]
+[[es:Ciruela]]
+[[et:Ploomipuu (alamperekond)]]
+[[eu:Okaran]]
+[[fr:Prune]]
+[[hi:आलू बुख़ारा]]
+[[hsb:Knykačkowc]]
+[[io:Pruno]]
+[[ml:പ്ലം]]
+[[nah:Ciruela]]
+[[nl:Kwets]]
+[[nv:Chʼil naʼatłʼoʼiitsoh]]
+[[oc:Pruna]]
+[[pt:Ameixeira]]
+[[sco:Ploum]]
+[[sv:Sviskon]]
+[[th:พลัม]]
+[[vi:Phân chi Mận mơ]]
