--- a/ᏍᏆᏏ.mw
+++ b/ᏍᏆᏏ.mw
@@ -4,3 +4,17 @@
 
 [[Category:Plantae]]
 [[Category:ᏧᏓᏔᏅ]]
+
+[[am:ዱባ]]
+[[de:Kürbisse]]
+[[nv:Naayízí (chʼil)]]
+[[el:Κολοκυθιά]]
+[[fa:کدو]]
+[[fr:Courge]]
+[[hi:स्क्वैश (पौधा)]]
+[[nl:Kalebas]]
+[[ps:بينګړۍ]]
+[[ckb:کوولەکە]]
+[[sv:Squash (växt)]]
+[[te:గుమ్మడి జాతి కాయ (మొక్క)]]
+[[th:สควอช]]
