*Empty MediaWiki Message*

--- a/ᏎᏗᏳᏍᏗ_ᏒᎦᏔ.mw
+++ b/ᏎᏗᏳᏍᏗ_ᏒᎦᏔ.mw
@@ -4,3 +4,82 @@
 
 [[Category:Plantae]]
 [[Category:ᏧᏓᏔᏅ]]
+
+[[ang:Peru (ofet)]]
+[[ar:كمثرى]]
+[[arc:ܟܡܬܪܐ]]
+[[av:Гени]]
+[[az:Armud]]
+[[bat-smg:Grūšė]]
+[[be:Груша]]
+[[bg:Круша]]
+[[bs:Kruška]]
+[[ckb:ھەرمێ]]
+[[cs:Hruška]]
+[[cy:Gellygen]]
+[[da:Pære]]
+[[de:Birnen]]
+[[dsb:Kšušcyna]]
+[[el:Αχλάδι]]
+[[eml:Pìr]]
+[[en:Pear]]
+[[eo:Piro]]
+[[es:Pyrus]]
+[[eu:Madari]]
+[[fa:گلابی]]
+[[fi:Päärynät]]
+[[fr:Poire]]
+[[fur:Piruçâr]]
+[[ga:Piorra]]
+[[gl:Pera]]
+[[gv:Peear]]
+[[he:אגס]]
+[[hr:Kruške]]
+[[hsb:Krušwa]]
+[[hu:Körte]]
+[[id:Pir]]
+[[ig:Ube]]
+[[io:Piro]]
+[[it:Pera]]
+[[ja:ナシ属]]
+[[ka:მსხალი]]
+[[kaa:Almurt]]
+[[ko:배나무속]]
+[[ks:ٹَنگ]]
+[[la:Pyrus]]
+[[lb:Bir]]
+[[lt:Kriaušė]]
+[[lv:Bumbieres]]
+[[mdf:Груша]]
+[[mi:Pea (huarākau)]]
+[[mrj:Грушаву]]
+[[ms:Pear]]
+[[nah:Pera]]
+[[nl:Peer (vrucht)]]
+[[nn:Pære]]
+[[no:Pære]]
+[[nrm:Peire]]
+[[nv:Bilasáana bitseeʼ nineezígíí]]
+[[oc:Pera]]
+[[os:Кæрдо]]
+[[pl:Grusza]]
+[[pt:Pera]]
+[[qu:Pira]]
+[[sco:Peir]]
+[[simple:Pear]]
+[[sl:Hruška (rod)]]
+[[sq:Dardha]]
+[[sr:Крушка]]
+[[sv:Päronsläktet]]
+[[ta:பேரி]]
+[[th:สาลี่]]
+[[tl:Peras]]
+[[tr:Armut]]
+[[uk:Груша]]
+[[ur:ناشپاتی]]
+[[vec:Perar]]
+[[vi:Lê (chi thực vật)]]
+[[wa:Poerî]]
+[[zh:梨]]
+[[zh-min-nan:Lâi-á]]
+[[zh-yue:梨]]
