*Empty MediaWiki Message*

--- a/ᏒᏗᏩᎵ.mw
+++ b/ᏒᏗᏩᎵ.mw
@@ -4,3 +4,40 @@
 
 [[Category:Plantae]]
 [[Category:ᏧᏓᏔᏅ]]
+
+[[an:Rubus idaeus]]
+[[az:Adi moruq]]
+[[ba:Ҡурай еләге]]
+[[be:Маліна звычайная]]
+[[bg:Малина]]
+[[ca:Gerd]]
+[[cs:Ostružiník maliník]]
+[[da:Hindbær]]
+[[de:Himbeere]]
+[[en:Rubus idaeus]]
+[[es:Rubus idaeus]]
+[[eu:Mugurdi]]
+[[fi:Vadelma]]
+[[fr:Framboisier]]
+[[gd:Sùbh-craoibh]]
+[[gl:Framboeseiro]]
+[[gv:Soo crouw]]
+[[he:פטל אדום]]
+[[hr:Malina]]
+[[hsb:Čerwjeny malenowc]]
+[[hu:Málna]]
+[[it:Rubus idæus]]
+[[ja:ヨーロッパキイチゴ]]
+[[kk:таңқурай]]
+[[lmo:Rubus idaeus]]
+[[lt:Paprastoji avietė]]
+[[nl:Framboos]]
+[[nn:Bringebær]]
+[[no:Bringebær]]
+[[pl:Malina właściwa]]
+[[pt:Framboesa]]
+[[ro:Zmeur]]
+[[sl:Malinjak]]
+[[sv:Hallon]]
+[[tr:Ahududu]]
+[[uk:Малина звичайна]]
