--- a/ᏕᎭᎷᎨ_ᎠᏓᏛᏍᎩ.mw
+++ b/ᏕᎭᎷᎨ_ᎠᏓᏛᏍᎩ.mw
@@ -4,3 +4,100 @@
 
 [[Category:Plantae]]
 [[Category:ᏧᏓᏔᏅ]]
+
+[[ab:Абаклаџьан]]
+[[ace:Truëng]]
+[[ang:Ǣȝƿyrt]]
+[[ar:باذنجان]]
+[[az:Badımcan]]
+[[be:Баклажан]]
+[[bg:Патладжан]]
+[[bi:Obesin]]
+[[bo:རྡོ་ལུ་མ།]]
+[[bs:Patlidžan]]
+[[ca:Albergínia]]
+[[cs:Lilek vejcoplodý]]
+[[cy:Planhigyn ŵy]]
+[[da:Aubergine]]
+[[de:Aubergine]]
+[[dsb:Oberžina]]
+[[dv:ބަށި]]
+[[el:Μελιτζάνα]]
+[[en:Eggplant]]
+[[eo:Melongeno]]
+[[es:Solanum melongena]]
+[[eu:Alberjinia]]
+[[fa:بادنجان]]
+[[fi:Munakoiso]]
+[[fr:Aubergine]]
+[[gu:રીંગણ]]
+[[gv:Lus ny h-oohyn]]
+[[he:חציל]]
+[[hi:बैंगन]]
+[[hr:Patlidžan]]
+[[hsb:Oberžina]]
+[[ht:Berejèn]]
+[[hu:Padlizsán]]
+[[hy:Բադրիջան]]
+[[id:Terung]]
+[[ilo:Tarong]]
+[[io:Berenjeno]]
+[[is:Eggaldin]]
+[[it:Solanum melongena]]
+[[ja:ナス]]
+[[jv:Térong]]
+[[ka:ბადრიჯანი]]
+[[kaa:Baklajan]]
+[[kk:Кәді]]
+[[kn:ಬದನೆ]]
+[[ko:가지 (식물)]]
+[[ks:وانٛگُن]]
+[[ku:Balîcan]]
+[[ky:Баклажан]]
+[[la:Melongena]]
+[[lbe:Бадуржан]]
+[[ln:Sóló]]
+[[lt:Baklažanas]]
+[[lv:Baklažāns]]
+[[ml:വഴുതന]]
+[[mr:वांगे]]
+[[ms:Terung]]
+[[my:ခရမ်းပင်]]
+[[nap:Mulignana]]
+[[ne:भान्टा]]
+[[nl:Aubergine (plant)]]
+[[no:Aubergine]]
+[[nv:Ayęęzhii yiltʼąąʼí]]
+[[pam:Balasenas]]
+[[pcd:Oubàrjine]]
+[[pl:Psianka podłużna]]
+[[pt:Beringela]]
+[[ro:Vânătă]]
+[[rw:Urutoryi]]
+[[sa:वृन्ताकः]]
+[[scn:Milinciana]]
+[[sh:Patlidžan]]
+[[simple:Aubergine]]
+[[sk:Ľuľok baklažánový]]
+[[sl:Jajčevec]]
+[[sq:Patëllxhani]]
+[[sr:Плави патлиџан]]
+[[su:Térong]]
+[[sv:Aubergine]]
+[[sw:Mbiringani]]
+[[ta:கத்தரி]]
+[[te:వంకాయ]]
+[[tg:Боқлаҷон]]
+[[th:มะเขือยาว]]
+[[ti:መለንዛና]]
+[[tl:Talong]]
+[[to:Paingani]]
+[[tr:Patlıcan]]
+[[ug:Çeyze]]
+[[uk:Баклажан]]
+[[ur:بینگن]]
+[[vi:Cà tím]]
+[[yi:פאטלעזשאן]]
+[[zh:茄]]
+[[zh-min-nan:Kiô (si̍t-bu̍t)]]
+[[zh-yue:矮瓜]]
