*Empty MediaWiki Message*

--- a/ᎣᏂᏥ.mw
+++ b/ᎣᏂᏥ.mw
@@ -1,9 +1,9 @@
 [[File:OrangeBloss_wb.jpg|thumb|right|ᎣᏂᏥ]]
 
-<big>'''ᎣᏂᏥ'''</big> ᎤᏓᏔᏅ.
+<big>'''ᎣᏂᏥ'''</big> ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
 [[Category:Plantae]]
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[ab:Апатырқал]]
 [[am:ብርቱካን (ፍሬ)]]
