*Empty MediaWiki Message*

--- a/ᎦᎦᎹ.mw
+++ b/ᎦᎦᎹ.mw
@@ -1,8 +1,8 @@
 [[File:ARS_cucumber.jpg|thumb|right|ᎦᎦᎹ]]
 
-<big>'''ᎦᎦᎹ'''</big> ᎢᏤᏳᏍᏗ ᎤᏓᏔᏅ.
+<big>'''ᎦᎦᎹ'''</big> ᎢᏤᏳᏍᏗ ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[ang:Hƿerhƿette]]
 [[ar:خيار]]
