*Empty MediaWiki Message*

--- a/ᎦᏩᏒᎩ.mw
+++ b/ᎦᏩᏒᎩ.mw
@@ -1,8 +1,8 @@
 [[File:Muskmelon.jpg|thumb|right|ᎦᏩᏒᎩ]]
 
-<big>'''ᎦᏩᏒᎩ'''</big> ᎤᏓᏔᏅ.
+<big>'''ᎦᏩᏒᎩ'''</big> ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[ar:بطيخ]]
 [[az:Yemiş]]
