--- a/ᎳᎢᎻ.mw
+++ b/ᎳᎢᎻ.mw
@@ -1,9 +1,9 @@
 [[File:Backyard_limes.jpg|thumb|right|ᎳᎢᎻ]]
 
-<big>'''ᎳᎢᎻ'''</big> ᎢᏤᏳᏍᏗ ᎤᏓᏔᏅ.
+<big>'''ᎳᎢᎻ'''</big> ᎢᏤᏳᏍᏗ ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
 [[Category:Plantae]]
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[bg:Зелен лимон]]
 [[bs:Limeta]]
