*Empty MediaWiki Message*

--- a/ᎴᎹᏂ.mw
+++ b/ᎴᎹᏂ.mw
@@ -1,8 +1,8 @@
 [[File:Lemon.jpg|thumb|right|ᎴᎹᏂ]]
 
-<big>'''ᎴᎹᏂ'''</big> ᎤᏓᏔᏅ.
+<big>'''ᎴᎹᏂ'''</big> ᏓᎶᏂᎨᎢ ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[am:ሎሚ]]
 [[an:Limón]]
