*Empty MediaWiki Message*

--- a/ᏧᏣᏲᏍᏗ_ᏒᎦᏔ.mw
+++ b/ᏧᏣᏲᏍᏗ_ᏒᎦᏔ.mw
@@ -1,9 +1,9 @@
 [[File:AnanasComosusOnPlant.jpg|thumb|right|ᏃᏥᏳᏍᏗ ᏒᎦᏔ]]
 
-<big>'''ᏃᏥᏳᏍᏗ ᏒᎦᏔ'''</big> ᎤᏓᏔᏅ.
+<big>'''ᏃᏥᏳᏍᏗ ᏒᎦᏔ'''</big> ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
 [[Category:Plantae]]
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[az:Ananas]]
 [[bg:Ананас (род)]]
