*Empty MediaWiki Message*

--- a/ᏆᏁᎾ.mw
+++ b/ᏆᏁᎾ.mw
@@ -1,8 +1,8 @@
 [[File:Bananas.jpg|thumb|right|ᏆᏁᎾ]]
 
-<big>'''ᏆᏁᎾ'''</big> ᎤᏓᏔᏅ.
+<big>'''ᏆᏁᎾ'''</big> ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[ab:Абанан]]
 [[ace:Pisang]]
