*Empty MediaWiki Message*

--- a/ᏆᏄᎾᏍᏗ.mw
+++ b/ᏆᏄᎾᏍᏗ.mw
@@ -1,9 +1,9 @@
 [[File:Plum_on_tree02.jpg|thumb|right|ᏆᏄᎾᏍᏗ]]
 
-<big>'''ᏆᏄᎾᏍᏗ'''</big> ᎠᎬᎭᎵᎨᎢ ᎤᏓᏔᏅ.
+<big>'''ᏆᏄᎾᏍᏗ'''</big> ᎠᎬᎭᎵᎨᎢ ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
 [[Category:Plantae]]
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[bar:Zwetschgn]]
 [[de:Zwetschge]]
