*Empty MediaWiki Message*

--- a/ᏆᏅ.mw
+++ b/ᏆᏅ.mw
@@ -1,9 +1,9 @@
 [[File:Autumn_Red_peaches.jpg|thumb|right|ᏆᏅ]]
 
-<big>'''ᏆᏅ'''</big> ᏓᎶᏂᎨ ᎤᏓᏔᏅ.
+<big>'''ᏆᏅ'''</big> ᏓᎶᏂᎨᎢ ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
 [[Category:Plantae]]
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[ab:Атама]]
 [[an:Prunus persica]]
