*Empty MediaWiki Message*

--- a/ᏌᎵ.mw
+++ b/ᏌᎵ.mw
@@ -1,9 +1,9 @@
 [[File:Screen shot 2010-09-13 at 9.06.46 PM.png|thumb|right|ᏌᎵ]]
 
-<big>'''ᏌᎵ'''</big> ᎤᏓᏔᏅ.
+<big>'''ᏌᎵ'''</big> ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
 [[Category:Plantae]]
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[ca:Caqui]]
 [[da:Kakifrugt]]
