*Empty MediaWiki Message*

--- a/ᏍᏆᏏ.mw
+++ b/ᏍᏆᏏ.mw
@@ -1,9 +1,9 @@
 [[File:YellowSquash.jpg|thumb|right|ᏍᏆᏏ]]
 
-<big>'''ᏍᏆᏏ'''</big> ᎤᏓᏔᏅ.
+<big>'''ᏍᏆᏏ'''</big> ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
 [[Category:Plantae]]
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[am:ዱባ]]
 [[de:Kürbisse]]
