*Empty MediaWiki Message*

--- a/ᏎᏗᏳᏍᏗ_ᏒᎦᏔ.mw
+++ b/ᏎᏗᏳᏍᏗ_ᏒᎦᏔ.mw
@@ -1,9 +1,9 @@
 [[File:Pears.jpg|thumb|right|ᏎᏗᏳᏍᏗ ᏒᎦᏔ]]
 
-<big>'''ᏎᏗᏳᏍᏗ ᏒᎦᏔ'''</big> ᎤᏓᏔᏅ.
+<big>'''ᏎᏗᏳᏍᏗ ᏒᎦᏔ'''</big> ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
 [[Category:Plantae]]
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[ang:Peru (ofet)]]
 [[ar:كمثرى]]
