*Empty MediaWiki Message*

--- a/ᏒᎦᏔ.mw
+++ b/ᏒᎦᏔ.mw
@@ -1,9 +1,9 @@
 [[File:Red_Apple.jpg|thumb|right|ᎩᎦᎨᎢ ᏒᎦᏔ]]
 
-<big>'''ᏒᎦᏔ'''</big> ᎤᏓᏔᏅ.
+<big>'''ᏒᎦᏔ'''</big> ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
 [[Category:Plantae]]
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[ar:تفاح]]
 [[an:Mazana]]
