*Empty MediaWiki Message*

--- a/ᏒᏗᏩᎵ.mw
+++ b/ᏒᏗᏩᎵ.mw
@@ -1,9 +1,9 @@
 [[File:Raspberries,_fruit_of_four_species.jpg|thumb|right|ᏒᏗᏩᎵ]]
 
-<big>'''ᏒᏗᏩᎵ'''</big> ᎩᎦᎨᎢ ᎤᏓᏔᏅ.
+<big>'''ᏒᏗᏩᎵ'''</big> ᎩᎦᎨᎢ ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
 [[Category:Plantae]]
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[an:Rubus idaeus]]
 [[az:Adi moruq]]
