*Empty MediaWiki Message*

--- a/ᏓᎶᏂᎨ_ᎠᏓᏛᏍᎩ.mw
+++ b/ᏓᎶᏂᎨ_ᎠᏓᏛᏍᎩ.mw
@@ -1,9 +1,9 @@
 [[File:Apricots.jpg|thumb|right|ᏓᎶᏂᎨ ᎠᏓᏛᏍᎩ]]
 
-<big>'''ᏓᎶᏂᎨ ᎠᏓᏛᏍᎩ'''</big> ᎤᏓᏔᏅ.
+<big>'''ᏓᎶᏂᎨ ᎠᏓᏛᏍᎩ'''</big> ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
 [[Category:Plantae]]
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[ab:Аҷарам]]
 [[an:Prunus armeniaca]]
