--- a/ᏔᎹᏟ.mw
+++ b/ᏔᎹᏟ.mw
@@ -1,9 +1,9 @@
 [[File:Bright_red_tomato_and_cross_section02.jpg|thumb|right|ᏔᎹᏟ]]
 
-<big>'''ᏔᎹᏟ'''</big> ᎩᎦᎨᎢ ᎤᏓᏔᏅ.
+<big>'''ᏔᎹᏟ'''</big> ᎩᎦᎨᎢ ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
 [[Category:Plantae]]
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[ab:Атомат]]
 [[ace:Truëng Tureuki]]
