--- a/ᏕᎭᎷᎨ_ᎠᏓᏛᏍᎩ.mw
+++ b/ᏕᎭᎷᎨ_ᎠᏓᏛᏍᎩ.mw
@@ -1,9 +1,9 @@
 [[File:Auberginej.jpg|thumb|right|ᏕᎭᎷᎨ ᎠᏓᏛᏍᎩ]]
 
-<big>'''ᏕᎭᎷᎨ ᎠᏓᏛᏍᎩ'''</big> ᎤᏓᏔᏅ.
+<big>'''ᏕᎭᎷᎨ ᎠᏓᏛᏍᎩ'''</big> ᎤᏓᏔᏅ ᎠᎩᏍᏗ.
 
 [[Category:Plantae]]
-[[Category:ᏧᏓᏔᏅ]]
+[[Category:ᎤᎾᏓᏔᏅ ᎠᎩᏍᏗ]]
 
 [[ab:Абаклаџьан]]
 [[ace:Truëng]]
