--- a/ᏍᏆᏂ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᏍᏆᏂ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -4,24 +4,24 @@
 == ᎠᏰᎵ ᏚᎾᏙᏢᏩᏗᏒ ==
 <div style="font-size:100%;-moz-column-count:2; column-count:2;">
 * [[United States|ᎠᎹᏰᏟ]]<ref name=CLDR>Common Locale Data Repository for Cherokee / Tsalagi. 2010.</ref>
-* [[Mexico|ᎠᏂᏍᏆᏂᎢ]]<ref name=CLDR/>
-* [[Spain|ᏍᏆᏂ]]
-* [[Argentina]]
-* [[Bolivia|ᏬᎵᏮᎠ]]
-* [[Chile]]
-* [[Colombia]]
-* [[Costa Rica]]
-* [[Cuba]]
-* [[Ecuador]]
-* [[El Salvador]]
-* [[Guatemala]]
-* [[Honduras]]
-* [[Nicaragua]]
-* [[Panama]]
-* [[Paraguay]]
-* [[Peru]]
-* [[Uruguay]]
-* [[Venezuela]]
+* [[Mexico|ᎺᏏᏅᏟ]]<ref name=CLDR/>
+* [[Spain|ᏍᏆᏂᏱ]]
+* [[Argentina|ᎠᏤᏂᏘᎾ]]
+* [[Bolivia|ᏉᎵᏫᏯ]]
+* [[Chile|ᏥᎵ]]
+* [[Colombia|ᎪᎳᎻᏈᏯ]]
+* [[Costa Rica|ᎪᏍᏔ-ᎵᎧ]]
+* [[Cuba|ᎫᏆ]]
+* [[Ecuador|ᎡᏆᏙᎠ]]
+* [[El Salvador|ᎡᎵ-ᏌᎵᏩᏙᎠ]]
+* [[Guatemala|ᏆᏖᎹᎳ]]
+* [[Honduras|ᎭᏂᏚᎳᏏ]]
+* [[Nicaragua|ᏂᎧᎳᏆ]]
+* [[Panama|ᏆᎾᎹ]]
+* [[Paraguay|ᏆᎳᏇᎢ]]
+* [[Peru|ᏇᎷ]]
+* [[Uruguay|ᎤᎷᏇᎢ]]
+* [[Venezuela|ᏪᏁᏍᏪᎳ]]
 </div>
 
 == ᏓᏓᏚᎬ ᎪᏪᎵ ==
