*Empty MediaWiki Message*

--- a/ᎠᏂᏲᎾ.mw
+++ b/ᎠᏂᏲᎾ.mw
@@ -16,7 +16,7 @@
     <td>[[File:Bundesarchiv Bild 183-18073-0003, Konstantin Sergejewitsch Stanislawski.jpg|60x70px]]</td>
   </tr>
   <tr>
-    <td><small><div style="background-color:#fee8ab">[[Rachmaninoff|ᎳᎯᎹᏂᏃᏫ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Rachmaninoff|ᎳᎧᎹᏂᎾᏫ]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Mendeleev|ᎺᏂᏕᎴᏰᏫ]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Peter the Great|ᏈᏓ I]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Pushkin|ᏊᏍᎩᏂ]]</small></td>
@@ -32,11 +32,11 @@
     <td>[[File:Alexandre Alekhine Color.jpg|60x70px]]</td>
   </tr>
   <tr>
-    <td><small><div style="background-color:#fee8ab">[[Vladimir Nabokov|ᎾᏉᎪᏫ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Vladimir Nabokov|ᎾᏉᎧᏫ]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Ivan IV|ᎠᎢᏩᏂ IV]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Gagarin|ᎦᎦᎵᏂ]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Suvorov|ᏑᏬᎶᏫ]]</small></td>
-    <td><small><div style="background-color:#fee8ab">[[Ivan Pavlov|ᏆᏩᎶᏫ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Gagarin|ᎦᎨᎵᏂ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Suvorov|ᏑᏬᎳᏫ]]</small></td>
+    <td><small><div style="background-color:#fee8ab">[[Ivan Pavlov|ᏆᏩᎳᏫ]]</small></td>
     <td><small><div style="background-color:#fee8ab">[[Alexandre Alekhine|ᎠᎴᎯᏂ]]</small></td>
   </tr>
   <tr>
@@ -64,9 +64,9 @@
    </td>
  <tr>
    <td><small><div style="background-color:#fee8ab">[[Solzhenitsyn|ᏐᎵᏤᏂᏥᏂ]]</small></td>
-   <td><small><div style="background-color:#fee8ab">[[Mikhail Kalashnikov|ᎧᎳᏍᏂᎪᏫ]]</small></td>
-   <td><small><div style="background-color:#fee8ab">[[Mikhail Lomonosov|ᎶᎹᏃᏐᏫ]]</small></td>
-   <td><small><div style="background-color:#fee8ab">[[Tschaikovsky|ᏣᎢᎪᏩᏍᎩ]]</small></td>
+   <td><small><div style="background-color:#fee8ab">[[Mikhail Kalashnikov|ᎧᎳᏍᏂᎧᏫ]]</small></td>
+   <td><small><div style="background-color:#fee8ab">[[Mikhail Lomonosov|ᎶᎹᏃᏌᏫ]]</small></td>
+   <td><small><div style="background-color:#fee8ab">[[Tschaikovsky|ᏣᎢᎧᏩᏍᎩ]]</small></td>
    <td><small><div style="background-color:#fee8ab">[[Chekhov|ᏤᎧᏫ]]</small></td>
    <td><small><div style="background-color:#fee8ab">[[Akhmatova|ᎠᎧᎹᏙᏩ]]</small></td>
     </td>
@@ -83,7 +83,7 @@
    <td><small><div style="background-color:#fee8ab">[[Dostoevsky|ᏓᏍᏙᏰᏩᏍᎩ]]</small></td>
    <td><small><div style="background-color:#fee8ab">[[Stravinsky|ᏍᏝᏫᏂᏍᎩ]]</small></td>
    <td><small><div style="background-color:#fee8ab">[[Zhukov|ᏧᎧᏫ]]</small></td>
-   <td><small><div style="background-color:#fee8ab">[[Shostakovich|ᏐᏍᏔᎪᏫᏥ]]</small></td>
+   <td><small><div style="background-color:#fee8ab">[[Shostakovich|ᏌᏍᏔᎪᏫᏥ]]</small></td>
    <td><small><div style="background-color:#fee8ab">[[Gogol|ᎪᎪᎵ]]</small></td>
     </td>
    <tr>
