*Empty MediaWiki Message*

--- a/ᎠᏂᎬᎾ_ᎧᏬᏂᎯᏍᏗ.mw
+++ b/ᎠᏂᎬᎾ_ᎧᏬᏂᎯᏍᏗ.mw
@@ -19,7 +19,7 @@
 |-
 |}
 
-<big>'''ᎠᏂᎬᎾ ᎧᏬᏂᎯᏍᏗ'''</big> ᎠᎴ <big>'''ᎬᏂ'''</big> ([[ᎬᏂ]]: ''Türkçe'') ᎧᏬᏂᎯᏍᏗ [[ᎬᏂᏱ]] ᎡᎯ.
+<big>'''ᎠᏂᎬᎾ ᎧᏬᏂᎯᏍᏗ'''</big> ᎠᎴ <big>'''ᎬᏂ'''</big> ([[ᎠᏂᎬᎾ ᎧᏬᏂᎯᏍᏗ|ᎬᏂ]]: ''Türkçe'') ᎧᏬᏂᎯᏍᏗ [[ᎬᏂᏱ]] ᎡᎯ.
 
 [[ace:Bahsa Tureuki]]
 [[kbd:Тыркубзэ]]
