*Empty MediaWiki Message*

--- a/ᎦᏌᎧᎯᎨ_ᎤᏃᎴ.mw
+++ b/ᎦᏌᎧᎯᎨ_ᎤᏃᎴ.mw
@@ -1,6 +1,8 @@
-[[File:He-TableImage.png|thumb|250px|ᎯᎵᏯᎻ]]
+[[File:He-TableImage.png|thumb|250px|ᎦᏌᎧᎯᎨ ᎤᏃᎴ]]
 
-<big>'''ᎯᎵᏯᎻ'''</big> ᎠᎴ '''(He)''' [[ᏑᏓᎴᎩ]]. [[ᎠᏓᎻ]] ᎠᏎᏍᏗ – 2.
+<big>'''ᎦᏌᎧᎯᎨ ᎤᏃᎴ'''</big> ᎠᎴ <big>'''ᎯᎵᏯᎻ'''</big> ᎠᎴ '''(He)''' [[ᏑᏓᎴᎩ]]. [[ᎠᏓᎻ]] ᎠᏎᏍᏗ – 2.
+
+[[Category:ᏑᏓᎴᎩ]]
 
 [[af:Helium]]
 [[an:Helio]]
