--- a/ᎵᏘᎥᎻ.mw
+++ b/ᎵᏘᎥᎻ.mw
@@ -1,5 +1,127 @@
 [[File:Li-TableImage.png|thumb|250px|ᎵᏘᏯᎻ]]
 
-<big>'''ᎵᏘᏯᎻ'''</big> ᎠᎴ '''(Li)''' [[ᏧᏓᎴᏅᏓ ᎫᎵᏍᏔᏅ ᏑᏓᎴᎩ]]. [[ᎠᏓᎻ]] ᎠᏎᏍᏗ – 3.
+<big>'''ᎵᏘᏯᎻ'''</big> ([[ᎩᎵᏏ]]: ''Lithium'', '''Li''') [[ᏧᏓᎴᏅᏓ ᎫᎵᏍᏔᏅ ᏑᏓᎴᎩ]]. [[ᎠᏓᎻ]] ᎠᏎᏍᏗ – 3.
 
 [[Category:ᏧᏓᎴᏅᏓ ᎫᎵᏍᏔᏅ ᏑᏓᎴᎩ]]
+
+[[af:Litium]]
+[[an:Litio]]
+[[ar:ليثيوم]]
+[[ast:Litiu]]
+[[az:Litium]]
+[[be:Літый]]
+[[be-x-old:Літ]]
+[[bg:Литий]]
+[[bn:লিথিয়াম]]
+[[br:Litiom]]
+[[bs:Litijum]]
+[[ca:Liti]]
+[[ckb:لیسیۆم]]
+[[co:Litiu]]
+[[cs:Lithium]]
+[[cv:Лити]]
+[[cy:Lithiwm]]
+[[da:Lithium]]
+[[de:Lithium]]
+[[el:Λίθιο]]
+[[en:Lithium]]
+[[eo:Litio]]
+[[es:Litio]]
+[[et:Liitium]]
+[[eu:Litio]]
+[[fa:لیتیم]]
+[[fi:Litium]]
+[[fo:Lithium]]
+[[fr:Lithium]]
+[[frr:Lithium]]
+[[fur:Liti]]
+[[fy:Litium]]
+[[ga:Litiam]]
+[[gl:Litio]]
+[[gv:Litçhey]]
+[[hak:Lî]]
+[[haw:Likiuma]]
+[[he:ליתיום]]
+[[hi:लिथियम]]
+[[hif:Lithium]]
+[[hr:Litij]]
+[[hsb:Litium]]
+[[ht:Lityòm]]
+[[hu:Lítium]]
+[[hy:Լիթիում]]
+[[ia:Lithium]]
+[[id:Litium]]
+[[io:Litio]]
+[[is:Litín]]
+[[it:Litio]]
+[[ja:リチウム]]
+[[jbo:roksodna]]
+[[jv:Litium]]
+[[ka:ლითიუმი]]
+[[kn:ಲಿಥಿಯಮ್]]
+[[ko:리튬]]
+[[ksh:Lithium]]
+[[ku:Lîtyûm]]
+[[kv:Литий]]
+[[lb:Lithium]]
+[[lij:Littio]]
+[[ln:Litu]]
+[[lt:Litis]]
+[[lv:Litijs]]
+[[mk:Литиум]]
+[[ml:ലിഥിയം]]
+[[mr:लिथियम]]
+[[mrj:Литий]]
+[[ms:Litium]]
+[[my:လီသီယမ်]]
+[[nds:Lithium]]
+[[ne:लीथियम]]
+[[new:लिथियम]]
+[[nl:Lithium (element)]]
+[[nn:Litium]]
+[[no:Litium]]
+[[oc:Liti]]
+[[pa:ਲਿਥੀਅਮ]]
+[[pap:Lithium]]
+[[pl:Lit (pierwiastek)]]
+[[pms:Litio]]
+[[pnb:لیتھیم]]
+[[pnt:Λίθιον]]
+[[pt:Lítio]]
+[[qu:Lityu]]
+[[ro:Litiu]]
+[[ru:Литий]]
+[[sa:लीथियम्]]
+[[sah:Литиум]]
+[[sh:Litij]]
+[[si:ලිතියම්]]
+[[simple:Lithium]]
+[[sk:Lítium]]
+[[sl:Litij]]
+[[sq:Litiumi]]
+[[sr:Литијум]]
+[[stq:Lithium]]
+[[su:Litium]]
+[[sv:Litium]]
+[[sw:Lithi]]
+[[ta:லித்தியம்]]
+[[te:లిథియం]]
+[[th:ลิเทียม]]
+[[tl:Lityo]]
+[[tr:Lityum]]
+[[tt:Литий]]
+[[ug:لىتىي]]
+[[uk:Літій]]
+[[ur:سنگصر]]
+[[uz:Litiy]]
+[[vep:Litii]]
+[[vi:Liti]]
+[[wa:Litiom]]
+[[war:Lityo]]
+[[xal:Литион]]
+[[yi:ליטיום]]
+[[yo:Lithium]]
+[[zh:锂]]
+[[zh-classical:鋰]]
+[[zh-min-nan:Lî-sò͘]]
+[[zh-yue:鋰]]
