*Empty MediaWiki Message*

--- a/ᎪᎳ_ᏗᏝᏂᎪᎯᏍᏗᏍᎩ.mw
+++ b/ᎪᎳ_ᏗᏝᏂᎪᎯᏍᏗᏍᎩ.mw
@@ -1,6 +1,6 @@
-[[File:Li-TableImage.png|thumb|250px|ᎪᎳ ᏗᏝᏂᎪᎯᏍᏗᏍᎩ]]
+[[File:Ca-TableImage.png|thumb|250px|ᎪᎳ ᏗᏝᏂᎪᎯᏍᏗᏍᎩ]]
 
-<big>'''ᎪᎳ ᏗᏝᏂᎪᎯᏍᏗᏍᎩ'''</big> ᎠᎴ '''ᎧᎵᏏᏯᎻ'''([[ᎩᎵᏏ]]: ''Lithium'', '''Li''') [[ᏧᏓᎴᏅᏓ ᎫᎵᏍᏔᏅ ᏑᏓᎴᎩ]]. [[ᎠᏓᎻ]] ᎠᏎᏍᏗ – 20.
+<big>'''ᎪᎳ ᏗᏝᏂᎪᎯᏍᏗᏍᎩ'''</big> ᎠᎴ '''ᎧᎵᏏᏯᎻ''' ([[ᎩᎵᏏ]]: ''Calcium'', '''Ca''') [[ᏧᏓᎴᏅᏓ ᎫᎵᏍᏔᏅ ᏑᏓᎴᎩ]]. [[ᎠᏓᎻ]] ᎠᏎᏍᏗ – 20.
 
 [[Category:ᏧᏓᎴᏅᏓ ᎫᎵᏍᏔᏅ ᏑᏓᎴᎩ]]
 
