*Empty MediaWiki Message*

--- a/ᎠᏕᎸ_ᎤᏁᎦ.mw
+++ b/ᎠᏕᎸ_ᎤᏁᎦ.mw
@@ -1,4 +1,4 @@
-[[File:Li-TableImage.png|thumb|250px|ᎠᏕᎸ ᎤᏁᎦ]]
+[[File:Ag-TableImage.png|thumb|250px|ᎠᏕᎸ ᎤᏁᎦ]]
 
 <big>'''ᎠᏕᎸ ᎤᏁᎦ'''</big> ([[ᎩᎵᏏ]]: ''Silver'', '''Ag''') [[ᏧᏓᎴᏅᏓ ᎫᎵᏍᏔᏅ ᏑᏓᎴᎩ]]. [[ᎠᏓᎻ]] ᎠᏎᏍᏗ – 47.
 
